--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -1,107 +1,107 @@
 ---
 sidebar_position: 1200
-title: "📋 FAQ"
+title: "📋 常见问题"
 ---
 
 import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
-### 💡 Why Docker?
-We understand Docker might not be everyone's preference; however, this approach is central to our project's design and operational efficiency. We view the project's commitment to Docker as a fundamental aspect and encourage those looking for different deployment methods to explore community-driven alternatives.
+### 💡 为什么选择 Docker？
+我们理解 Docker 可能不是每个人的首选；但是，这种方法是我们项目设计和运营效率的核心。我们将项目对 Docker 的承诺视为一个基本方面，并鼓励寻求不同部署方法的用户探索社区驱动的替代方案。
 
-### 📜 Table of Contents
+### 📜 目录
 
-- [Q: Why am I asked to sign up? Where are my data being sent to?](#q-why-am-i-asked-to-sign-up-where-are-my-data-being-sent-to)
-- [Q: Why can't my Docker container connect to services on the host using localhost?](#q-why-cant-my-docker-container-connect-to-services-on-the-host-using-localhost)
-- [Q: How do I make my host's services accessible to Docker containers?](#q-how-do-i-make-my-hosts-services-accessible-to-docker-containers)
-- [Q: Why isn't my Open WebUI updating? I've re-pulled/restarted the container, and nothing changed.](#q-why-isnt-my-open-webui-updating-ive-re-pulledrestarted-the-container-and-nothing-changed)
-- [Q: Wait, why would I delete my container? Won't I lose my data?](#q-wait-why-would-i-delete-my-container-wont-i-lose-my-data)
-- [Q: Should I use the distro-packaged Docker or the official Docker package?](#q-should-i-use-the-distro-packaged-docker-or-the-official-docker-package)
-- [Q: Is GPU support available in Docker?](#q-is-gpu-support-available-in-docker)
-- [Q: Why does Open WebUI emphasize the use of Docker?](#q-why-does-open-webui-emphasize-the-use-of-docker)
-- [Q: Why doesn't Speech-to-Text (STT) and Text-to-Speech (TTS) work in my deployment?](#q-why-doesnt-speech-to-text-stt-and-text-to-speech-tts-work-in-my-deployment)
-- [Q: Why doesn't Open WebUI include built-in HTTPS support?](#q-why-doesnt-open-webui-include-built-in-https-support)
-- [Q: I updated/restarted/installed some new software and now Open WebUI isn't working anymore!](#q-i-updatedrestartedinstalled-some-new-software-and-now-open-webui-isnt-working-anymore)
-- [Q: I updated/restarted and now my login isn't working anymore, I had to create a new account and all my chats are gone.](#q-i-updatedrestarted-and-now-my-login-isnt-working-anymore-i-had-to-create-a-new-account-and-all-my-chats-are-gone)
-- [Q: I tried to login and couldn't, made a new account and now I'm being told my account needs to be activated by an admin.](#q-i-tried-to-login-and-couldnt-made-a-new-account-and-now-im-being-told-my-account-needs-to-be-activated-by-an-admin)
-- [Q: Why can't Open WebUI start with an SSL error?](#q-why-cant-open-webui-start-with-an-ssl-error)
+- [问：为什么要我注册？我的数据会被发送到哪里？](#q-why-am-i-asked-to-sign-up-where-are-my-data-being-sent-to)
+- [问：为什么我的 Docker 容器无法使用 localhost 连接到主机上的服务？](#q-why-cant-my-docker-container-connect-to-services-on-the-host-using-localhost)
+- [问：如何让我的主机服务对 Docker 容器可访问？](#q-how-do-i-make-my-hosts-services-accessible-to-docker-containers)
+- [问：为什么我的 Open WebUI 没有更新？我已经重新拉取/重启了容器，但没有任何变化。](#q-why-isnt-my-open-webui-updating-ive-re-pulledrestarted-the-container-and-nothing-changed)
+- [问：等等，为什么要删除我的容器？我不会丢失数据吗？](#q-wait-why-would-i-delete-my-container-wont-i-lose-my-data)
+- [问：我应该使用发行版打包的 Docker 还是官方 Docker 包？](#q-should-i-use-the-distro-packaged-docker-or-the-official-docker-package)
+- [问：Docker 中是否支持 GPU？](#q-is-gpu-support-available-in-docker)
+- [问：为什么 Open WebUI 强调使用 Docker？](#q-why-does-open-webui-emphasize-the-use-of-docker)
+- [问：为什么语音转文本（STT）和文本转语音（TTS）在我的部署中不工作？](#q-why-doesnt-speech-to-text-stt-and-text-to-speech-tts-work-in-my-deployment)
+- [问：为什么 Open WebUI 不包含内置的 HTTPS 支持？](#q-why-doesnt-open-webui-include-built-in-https-support)
+- [问：我更新/重启/安装了一些新软件，现在 Open WebUI 不能工作了！](#q-i-updatedrestartedinstalled-some-new-software-and-now-open-webui-isnt-working-anymore)
+- [问：我更新/重启后登录不了了，我不得不创建一个新账户，而且所有的聊天记录都不见了。](#q-i-updatedrestarted-and-now-my-login-isnt-working-anymore-i-had-to-create-a-new-account-and-all-my-chats-are-gone)
+- [问：我尝试登录但失败了，创建了新账户后被告知需要管理员激活。](#q-i-tried-to-login-and-couldnt-made-a-new-account-and-now-im-being-told-my-account-needs-to-be-activated-by-an-admin)
+- [问：为什么 Open WebUI 因 SSL 错误而无法启动？](#q-why-cant-open-webui-start-with-an-ssl-error)
 
-#### **Q: Why am I asked to sign up? Where are my data being sent to?**
+#### **问：为什么要我注册？我的数据会被发送到哪里？**
 
-**A:** We require you to sign up to become the admin user for enhanced security. This ensures that if the Open WebUI is ever exposed to external access, your data remains secure. It's important to note that everything is kept local. We do not collect your data. When you sign up, all information stays within your server and never leaves your device. Your privacy and security are our top priorities, ensuring that your data remains under your control at all times.
+**答：** 我们要求您注册是为了让您成为具有增强安全性的管理员用户。这确保了如果 Open WebUI 曾经暴露于外部访问，您的数据仍然安全。重要的是要注意，所有内容都保持在本地。我们不收集您的数据。当您注册时，所有信息都保存在您的服务器中，永远不会离开您的设备。您的隐私和安全是我们的首要任务，确保您的数据始终在您的控制之下。
 
-#### **Q: Why can't my Docker container connect to services on the host using `localhost`?**
+#### **问：为什么我的 Docker 容器无法使用 `localhost` 连接到主机上的服务？**
 
-**A:** Inside a Docker container, `localhost` refers to the container itself, not the host machine. This distinction is crucial for networking. To establish a connection from your container to services running on the host, you should use the DNS name `host.docker.internal` instead of `localhost`. This DNS name is specially recognized by Docker to facilitate such connections, effectively treating the host as a reachable entity from within the container, thus bypassing the usual `localhost` scope limitation.
+**答：** 在 Docker 容器内部，`localhost` 指的是容器本身，而不是主机。这种区别对网络连接至关重要。要从容器连接到主机上运行的服务，您应该使用 DNS 名称 `host.docker.internal` 而不是 `localhost`。Docker 特别识别这个 DNS 名称以便于此类连接，有效地将主机视为容器内部可访问的实体，从而绕过通常的 `localhost` 范围限制。
 
-#### **Q: How do I make my host's services accessible to Docker containers?**
+#### **问：如何让我的主机服务对 Docker 容器可访问？**
 
-**A:** To make services running on the host accessible to Docker containers, configure these services to listen on all network interfaces, using the IP address `0.0.0.0`, instead of `127.0.0.1` which is limited to `localhost` only. This configuration allows the services to accept connections from any IP address, including Docker containers. It's important to be aware of the security implications of this setup, especially when operating in environments with potential external access. Implementing appropriate security measures, such as firewalls and authentication, can help mitigate risks.
+**答：** 要使主机上运行的服务对 Docker 容器可访问，请将这些服务配置为监听所有网络接口，使用 IP 地址 `0.0.0.0`，而不是仅限于 `localhost` 的 `127.0.0.1`。这种配置允许服务接受来自任何 IP 地址的连接，包括 Docker 容器。重要的是要意识到这种设置的安全影响，特别是在可能有外部访问的环境中运行时。实施适当的安全措施，如防火墙和身份验证，可以帮助降低风险。
 
-#### **Q: Why isn't my Open WebUI updating? I've re-pulled/restarted the container, and nothing changed.**
+#### **问：为什么我的 Open WebUI 没有更新？我已经重新拉取/重启了容器，但没有任何变化。**
 
-**A:** Updating Open WebUI requires more than just pulling the new Docker image. Here’s why your updates might not be showing and how to ensure they do:
+**答：** 更新 Open WebUI 需要的不仅仅是拉取新的 Docker 镜像。以下是您的更新可能没有显示的原因以及如何确保它们生效：
 
-1. **Updating the Docker Image**: The command `docker pull ghcr.io/open-webui/open-webui:main` updates the Docker image but not the running container or its data.
-2. **Persistent Data in Docker Volumes**: Docker volumes store data independently of container lifecycles, preserving your data (like chat histories) through updates.
-3. **Applying the Update**: Ensure your update takes effect by removing the existing container (which doesn't delete the volume) and creating a new one with the updated image and existing volume attached.
+1. **更新 Docker 镜像**：命令 `docker pull ghcr.io/open-webui/open-webui:main` 更新 Docker 镜像，但不会更新正在运行的容器或其数据。
+2. **Docker 卷中的持久数据**：Docker 卷独立于容器生命周期存储数据，在更新过程中保留您的数据（如聊天历史）。
+3. **应用更新**：通过删除现有容器（这不会删除卷）并使用更新的镜像和现有卷创建新容器，确保您的更新生效。
 
-This process updates the app while keeping your data safe.
+这个过程在保持数据安全的同时更新应用程序。
 
-#### **Q: Wait, why would I delete my container? Won't I lose my data?**
+#### **问：等等，为什么要删除我的容器？我不会丢失数据吗？**
 
-**A:** It's a common concern, but deleting a container doesn't mean you'll lose your data, provided you're using Docker volumes correctly. Here’s why:
+**答：** 这是一个常见的担忧，但只要您正确使用 Docker 卷，删除容器并不意味着您会丢失数据。原因如下：
 
-- **Volumes Preserve Data**: Docker volumes are designed to persist data outside of container lifecycles. As long as your data is stored in a volume, it remains intact, regardless of what happens to the container.
-- **Safe Update Process**: When updating Open WebUI, removing the old container and creating a new one with the updated image does not affect the data stored in volumes. The key is not to explicitly delete the volume with commands like `docker volume rm`.
+- **卷保留数据**：Docker 卷设计用于在容器生命周期之外持久保存数据。只要您的数据存储在卷中，无论容器发生什么，它都会保持完整。
+- **安全更新过程**：更新 Open WebUI 时，删除旧容器并使用更新的镜像创建新容器不会影响存储在卷中的数据。关键是不要使用 `docker volume rm` 等命令显式删除卷。
 
-By following the correct update steps—pulling the new image, removing the old container without deleting the volume, and creating a new container with the updated image and the existing volume—your application code is updated while your data remains unchanged and safe.
+通过遵循正确的更新步骤——拉取新镜像、删除旧容器而不删除卷、使用更新的镜像和现有卷创建新容器——您的应用程序代码得到更新，而您的数据保持不变且安全。
 
-#### **Q: Should I use the distro-packaged Docker or the official Docker package?**
+#### **问：我应该使用发行版打包的 Docker 还是官方 Docker 包？**
 
-**A:** We recommend using the official Docker package over distro-packaged versions for running Open WebUI. The official Docker package is frequently updated with the latest features, bug fixes, and security patches, ensuring optimal performance and security. Additionally, it supports important functionalities like `host.docker.internal`, which may not be available in distro-packaged versions. This feature is essential for proper network configurations and connectivity within Docker containers.
+**答：** 我们建议使用官方 Docker 包而不是发行版打包的版本来运行 Open WebUI。官方 Docker 包经常更新最新功能、错误修复和安全补丁，确保最佳性能和安全性。此外，它支持重要功能，如 `host.docker.internal`，这在发行版打包的版本中可能不可用。这个功能对于 Docker 容器内的正确网络配置和连接至关重要。
 
-By choosing the official Docker package, you benefit from consistent behavior across different environments, more reliable troubleshooting support, and access to the latest Docker advancements. The broader Docker community and resources are also more aligned with the official package, providing you with a wealth of information and support for any issues you might encounter.
+选择官方 Docker 包，您可以受益于不同环境中的一致行为、更可靠的故障排除支持，以及访问最新的 Docker 进展。更广泛的 Docker 社区和资源也更加符合官方包，为您可能遇到的任何问题提供丰富的信息和支持。
 
-Everything you need to run Open WebUI, including your data, remains within your control and your server environment, emphasizing our commitment to your privacy and security. For instructions on installing the official Docker package, please refer to the [Install Docker Engine](https://docs.docker.com/engine/install/) guide on Docker's official documentation site.
+运行 Open WebUI 所需的一切，包括您的数据，都保持在您的控制之下和您的服务器环境中，强调我们对您的隐私和安全的承诺。有关安装官方 Docker 包的说明，请参阅 Docker 官方文档网站上的[安装 Docker 引擎](https://docs.docker.com/engine/install/)指南。
 
-#### **Q: Is GPU support available in Docker?**
+#### **问：Docker 中是否支持 GPU？**
 
-**A:** GPU support in Docker is available but varies depending on the platform. Officially, GPU support is provided in Docker for Windows and Docker Engine on Linux. Other platforms, such as Docker Desktop for Linux and MacOS, do not currently offer GPU support. This limitation is important to consider for applications requiring GPU acceleration. For the best experience and to utilize GPU capabilities, we recommend using Docker on platforms that officially support GPU integration.
+**答：** Docker 中的 GPU 支持是可用的，但根据平台而异。官方上，GPU 支持在 Windows 的 Docker 和 Linux 的 Docker Engine 中提供。其他平台，如 Linux 和 MacOS 的 Docker Desktop，目前不提供 GPU 支持。对于需要 GPU 加速的应用程序来说，这个限制很重要。为了获得最佳体验并利用 GPU 功能，我们建议在官方支持 GPU 集成的平台上使用 Docker。
 
-#### **Q: Why does Open WebUI emphasize the use of Docker?**
+#### **问：为什么 Open WebUI 强调使用 Docker？**
 
-**A:** The decision to use Docker stems from its ability to ensure consistency, isolate dependencies, and simplify deployment across different environments. Docker minimizes compatibility issues and streamlines the process of getting the WebUI up and running, regardless of the underlying system. It's a strategic choice by the project maintainers to harness these benefits, acknowledging that while Docker has a learning curve, the advantages for deployment and maintenance are significant. We understand Docker might not be everyone's preference; however, this approach is central to our project's design and operational efficiency. We view the project's commitment to Docker as a fundamental aspect and encourage those looking for different deployment methods to explore community-driven alternatives.
+**答：** 选择使用 Docker 源于其确保一致性、隔离依赖关系以及简化不同环境部署的能力。Docker 最大限度地减少了兼容性问题，并简化了让 WebUI 启动和运行的过程，而不受底层系统的影响。这是项目维护者的战略选择，以利用这些优势，认识到虽然 Docker 有学习曲线，但部署和维护的优势很显著。我们理解 Docker 可能不是每个人的首选；但是，这种方法是我们项目设计和运营效率的核心。我们将项目对 Docker 的承诺视为一个基本方面，并鼓励寻求不同部署方法的用户探索社区驱动的替代方案。
 
-#### **Q: Why doesn't Speech-to-Text (STT) and Text-to-Speech (TTS) work in my deployment?**
+#### **问：为什么语音转文本（STT）和文本转语音（TTS）在我的部署中不工作？**
 
-**A:** The functionality of Speech-to-Text (STT) and Text-to-Speech (TTS) services in your deployment may require HTTPS to operate correctly. Modern browsers enforce security measures that restrict certain features, including STT and TTS, to only work under secure HTTPS connections. If your deployment is not configured to use HTTPS, these services might not function as expected. Ensuring your deployment is accessible over HTTPS can resolve these issues, enabling full functionality of STT/TTS features.
+**答：** 您部署中的语音转文本（STT）和文本转语音（TTS）服务的功能可能需要 HTTPS 才能正确运行。现代浏览器强制执行安全措施，限制某些功能（包括 STT 和 TTS）仅在安全的 HTTPS 连接下工作。如果您的部署未配置使用 HTTPS，这些服务可能无法按预期运行。确保您的部署可通过 HTTPS 访问可以解决这些问题，启用 STT/TTS 功能的完整功能。
 
-#### **Q: Why doesn't Open WebUI include built-in HTTPS support?**
+#### **问：为什么 Open WebUI 不包含内置的 HTTPS 支持？**
 
-**A:** While we understand the desire for an all-in-one solution that includes HTTPS support, we believe such an approach wouldn't adequately serve the diverse needs of our user base. Implementing HTTPS directly within the project could limit flexibility and may not align with the specific requirements or preferences of all users. To ensure that everyone can tailor their setup to their unique environment, we leave the implementation of HTTPS termination to the users for their production deployments. This decision allows for greater adaptability and customization. Though we don't offer official documentation on setting up HTTPS, community members may provide guidance upon request, sharing insights and suggestions based on their experiences.
+**答：** 虽然我们理解对包含 HTTPS 支持的一体化解决方案的需求，但我们认为这种方法无法充分满足我们用户群的多样化需求。直接在项目中实现 HTTPS 可能会限制灵活性，可能不符合所有用户的特定要求或偏好。为确保每个人都可以根据其独特环境定制其设置，我们将 HTTPS 终止的实现留给用户进行生产部署。这个决定允许更大的适应性和定制化。虽然我们不提供设置 HTTPS 的官方文档，但社区成员可能会根据请求提供指导，分享基于其经验的见解和建议。
 
-#### **Q: I updated/restarted/installed some new software and now Open WebUI isn't working anymore!**
+#### **问：我更新/重启/安装了一些新软件，现在 Open WebUI 不能工作了！**
 
-**A:** If your Open WebUI isn't launching post-update or installation of new software, it's likely related to a direct installation approach, especially if you didn't use a virtual environment for your backend dependencies. Direct installations can be sensitive to changes in the system's environment, such as updates or new installations that alter existing dependencies. To avoid conflicts and ensure stability, we recommend using a virtual environment for managing the `requirements.txt` dependencies of your backend. This isolates your Open WebUI dependencies from other system packages, minimizing the risk of such issues.
+**答：** 如果您的 Open WebUI 在更新后或安装新软件后无法启动，这很可能与直接安装方法有关，特别是如果您没有为后端依赖项使用虚拟环境。直接安装对系统环境的变化很敏感，例如更新或新安装改变现有依赖项。为避免冲突并确保稳定性，我们建议使用虚拟环境来管理后端的 `requirements.txt` 依赖项。这将您的 Open WebUI 依赖项与其他系统包隔离，最大限度地减少此类问题的风险。
 
-#### **Q: I updated/restarted and now my login isn't working anymore, I had to create a new account and all my chats are gone.**
+#### **问：我更新/重启后登录不了了，我不得不创建一个新账户，而且所有的聊天记录都不见了。**
 
-**A:** This issue typically arises when a Docker container is created without mounting a volume for `/app/backend/data` or if the designated Open WebUI volume (usually named `open-webui` in our examples) was unintentionally deleted. Docker volumes are crucial for persisting your data across container lifecycles. If you find yourself needing to create a new account after a restart, it's likely you've initiated a new container without attaching the existing volume where your data resides. Ensure that your Docker run command includes a volume mount pointing to the correct data location to prevent data loss.
+**答：** 这个问题通常发生在创建 Docker 容器时没有挂载 `/app/backend/data` 的卷，或者指定的 Open WebUI 卷（在我们的示例中通常命名为 `open-webui`）被无意中删除。Docker 卷对于在容器生命周期中持久保存您的数据至关重要。如果您发现在重启后需要创建新账户，很可能是您启动了一个新容器，而没有附加存储数据的现有卷。确保您的 Docker run 命令包含指向正确数据位置的卷挂载，以防止数据丢失。
 
-#### **Q: I tried to login and couldn't, made a new account and now I'm being told my account needs to be activated by an admin.**
+#### **问：我尝试登录但失败了，创建了新账户后被告知需要管理员激活。**
 
-**A:** This situation occurs when you forget the password for the initial admin account created during the first setup. The first account is automatically designated as the admin account. Creating a new account without access to the admin account will result in the need for admin activation. Avoiding the loss of the initial admin account credentials is crucial for seamless access and management of Open WebUI. See the [Resetting the Admin Password](troubleshooting/password-reset) guide for instructions on recovering the admin account.
+**答：** 这种情况发生在您忘记了首次设置期间创建的初始管理员账户的密码时。第一个账户自动指定为管理员账户。在没有管理员账户访问权限的情况下创建新账户将导致需要管理员激活。避免丢失初始管理员账户凭据对于无缝访问和管理 Open WebUI 至关重要。请参阅[重置管理员密码](troubleshooting/password-reset)指南，了解恢复管理员账户的说明。
 
-#### **Q: Why can't Open WebUI start with an SSL error?**
+#### **问：为什么 Open WebUI 因 SSL 错误而无法启动？**
 
-**A:** The SSL error you're encountering when starting Open WebUI is likely due to the absence of SSL certificates or incorrect configuration of [huggingface.co](https://huggingface.co/). To resolve this issue, you could set up a mirror for HuggingFace, such as [hf-mirror.com](https://hf-mirror.com/), and specify it as the endpoint when starting the Docker container. Use the `-e HF_ENDPOINT=https://hf-mirror.com/` parameter to define the HuggingFace mirror address in the Docker run command. For example, you can modify the Docker run command as follows:
+**答：** 启动 Open WebUI 时遇到的 SSL 错误可能是由于缺少 SSL 证书或 [huggingface.co](https://huggingface.co/) 配置不正确。要解决此问题，您可以为 HuggingFace 设置镜像，例如 [hf-mirror.com](https://hf-mirror.com/)，并在启动 Docker 容器时将其指定为端点。使用 `-e HF_ENDPOINT=https://hf-mirror.com/` 参数在 Docker run 命令中定义 HuggingFace 镜像地址。例如，您可以按如下方式修改 Docker run 命令：
 
 ```bash
 docker run -d -p 3000:8080 -e HF_ENDPOINT=https://hf-mirror.com/ --add-host=host.docker.internal:host-gateway -v open-webui:/app/backend/data --name open-webui --restart always ghcr.io/open-webui/open-webui:main
 ```
 
-#### **Need Further Assistance?**
+#### **需要进一步帮助？**
 
-If you have any further questions or concerns, please reach out to our [GitHub Issues page](https://github.com/open-webui/open-webui/issues) or our [Discord channel](https://discord.gg/5rJgQTnV4s) for more help and information.
+如果您有任何其他问题或疑虑，请访问我们的 [GitHub Issues 页面](https://github.com/open-webui/open-webui/issues)或我们的 [Discord 频道](https://discord.gg/5rJgQTnV4s)获取更多帮助和信息。
