--- a/docs/getting-started/quick-start/starting-with-ollama.mdx
+++ b/docs/getting-started/quick-start/starting-with-ollama.mdx
@@ -1,51 +1,51 @@
 ---
 sidebar_position: 1
-title: "🦙 Starting With Ollama"
+title: "🦙 Ollama 入门"
 ---
 
-## Overview
+## 概述
 
-Open WebUI makes it easy to connect and manage your **Ollama** instance. This guide will walk you through setting up the connection, managing models, and getting started.
-
----
-
-## Step 1: Setting Up the Ollama Connection
-
-Once Open WebUI is installed and running, it will automatically attempt to connect to your Ollama instance. If everything goes smoothly, you’ll be ready to manage and use models right away.
-
-However, if you encounter connection issues, the most common cause is a network misconfiguration. You can refer to our [connection troubleshooting guide](/troubleshooting/connection-error) for help resolving these problems.
+Open WebUI 让连接和管理您的 **Ollama** 实例变得简单。本指南将带您完成连接设置、模型管理和入门步骤。
 
 ---
 
-## Step 2: Managing Your Ollama Instance
+## 步骤 1：设置 Ollama 连接
 
-To manage your Ollama instance in Open WebUI, follow these steps:
+一旦 Open WebUI 安装并运行，它会自动尝试连接到您的 Ollama 实例。如果一切顺利，您就可以立即开始管理和使用模型了。
 
-1. Go to **Admin Settings** in Open WebUI.
-2. Navigate to **Connections > Ollama > Manage** (click the wrench icon).  
-   From here, you can download models, configure settings, and manage your connection to Ollama.
-
-Here’s what the management screen looks like:
-
-![Ollama Management Screen](/img/getting-started/quick-start/manage-ollama.png)
-
-![Ollama Management Screen](/img/getting-started/quick-start/manage-modal-ollama.png)
-
-
-## A Quick and Efficient Way to Download Models
-
-If you’re looking for a faster option to get started, you can download models directly from the **Model Selector**. Simply type the name of the model you want, and if it’s not already available, Open WebUI will prompt you to download it from Ollama.
-
-Here’s an example of how it works:
-
-![Ollama Download Prompt](/img/getting-started/quick-start/selector-ollama.png)
-
-This method is perfect if you want to skip navigating through the Admin Settings menu and get right to using your models.
+但是，如果您遇到连接问题，最常见的原因是网络配置错误。您可以参考我们的[连接故障排除指南](/troubleshooting/connection-error)来解决这些问题。
 
 ---
 
-## All Set!
+## 步骤 2：管理您的 Ollama 实例
 
-That’s it! Once your connection is configured and your models are downloaded, you’re ready to start using Ollama with Open WebUI. Whether you’re exploring new models or running your existing ones, Open WebUI makes everything simple and efficient.
+要在 Open WebUI 中管理您的 Ollama 实例，请按照以下步骤操作：
 
-If you run into any issues or need more guidance, check out our [help section](/troubleshooting) for detailed solutions. Enjoy using Ollama! 🎉
+1. 在 Open WebUI 中进入**管理员设置**。
+2. 导航到**连接 > Ollama > 管理**（点击扳手图标）。  
+   在这里，您可以下载模型、配置设置并管理您与 Ollama 的连接。
+
+以下是管理界面的样子：
+
+![Ollama 管理界面](/img/getting-started/quick-start/manage-ollama.png)
+
+![Ollama 管理界面](/img/getting-started/quick-start/manage-modal-ollama.png)
+
+
+## 快速高效的模型下载方式
+
+如果您想要更快速的入门方式，可以直接从**模型选择器**下载模型。只需输入您想要的模型名称，如果该模型尚未可用，Open WebUI 会提示您从 Ollama 下载它。
+
+以下是它的工作方式示例：
+
+![Ollama 下载提示](/img/getting-started/quick-start/selector-ollama.png)
+
+如果您想跳过导航管理员设置菜单，直接开始使用模型，这种方法是完美的选择。
+
+---
+
+## 一切就绪！
+
+就是这样！一旦您的连接配置完成并且模型下载完毕，您就可以开始使用带有 Open WebUI 的 Ollama 了。无论您是在探索新模型还是运行现有模型，Open WebUI 都能让一切变得简单高效。
+
+如果您遇到任何问题或需要更多指导，请查看我们的[帮助部分](/troubleshooting)获取详细解决方案。祝您使用 Ollama 愉快！🎉
