--- a/docs/roadmap.mdx
+++ b/docs/roadmap.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1400
-title: "🛣️ Roadmap"
+title: "🛣️ 路线图"
 ---
 
 import { TopBanners } from "@site/src/components/TopBanners";
@@ -8,72 +8,72 @@ import { TopBanners } from "@site/src/components/TopBanners";
 <TopBanners />
 
 
-At Open WebUI, we're committed to continually enhancing our platform to provide the best experience for our users. Below, you'll find the structured roadmap for our ongoing and future developments, categorized into Interface, Information Retrieval, and Community.
+在 Open WebUI，我们致力于不断增强我们的平台，为用户提供最佳体验。下面，您将看到我们正在进行和未来发展的结构化路线图，分为界面、信息检索和社区三个类别。
 
-## Interface 🖥️
+## 界面 🖥️
 
-Our roadmap for interface innovations aims to create a highly intuitive and accessible platform. These will not only improves user satisfaction but also enhance productivity by reducing the cognitive load on users.
+我们的界面创新路线图旨在创建一个高度直观和易于使用的平台。这不仅能提高用户满意度，还能通过减少用户的认知负担来提升生产力。
 
-- 🔗 **ReACT Tool Calling Support**: The platform will implement ReACT (Reasoning + Acting) for on-the-fly tool function calling, enabling models to dynamically interact with external tools in real-time during conversations. This advanced capability will make workflows more interactive and efficient, streamlining problem-solving within the ecosystem.  
+- 🔗 **ReACT 工具调用支持**：平台将实现 ReACT（推理 + 行动）用于即时工具函数调用，使模型能够在对话过程中实时动态与外部工具交互。这种高级功能将使工作流程更具交互性和效率，简化生态系统内的问题解决。
 
-- 📜 **MCP (Model Context Protocol) Tools Support**: Introducing support for the MCP framework to establish seamless communication and context tracking across interconnected AI systems and modules. This ensures that context is preserved, workflows are maintained, and tools function cohesively, reducing the need for manual intervention or reinitialization.  
+- 📜 **MCP（模型上下文协议）工具支持**：引入对 MCP 框架的支持，以建立互连 AI 系统和模块之间的无缝通信和上下文跟踪。这确保了上下文的保持、工作流程的维护和工具的协同运作，减少了手动干预或重新初始化的需求。
 
-- 📦 **Packaged Single Binary Executable**: Simplifying deployment and ensuring compatibility across different platforms, we aim to offer our interface as a single binary executable. This approach will facilitate effortless installation and updates, significantly enhancing usability for all users, especially those with limited technical expertise.
+- 📦 **打包单一二进制可执行文件**：简化部署并确保跨平台兼容性，我们的目标是将界面提供为单一二进制可执行文件。这种方法将促进轻松安装和更新，显著提升所有用户的可用性，特别是对于技术专业知识有限的用户。
 
-- 👤 **User Page**: A personal User Page feature where users can create posts. The functionality will also include features like followers, likes, and comments. This allows users to effectively share their model configurations, prompts, and files with a broader community, creating a richer, more connected ecosystem around the platform.
+- 👤 **用户页面**：用户可以创建帖子的个人用户页面功能。该功能还将包括关注者、点赞和评论等功能。这使用户能够有效地与更广泛的社区分享他们的模型配置、提示和文件，在平台周围创建一个更丰富、更紧密连接的生态系统。
 
-- 📝 **AI Powered Notes**: Inspired by tools like Notion and Obsidian, we plan to introduce a robust note-taking feature that includes AI integration. From simple note-taking to full-fledged document creation, this tool will offer a seamless experience, all locally integrated within the platform.
+- 📝 **AI 驱动的笔记**：受 Notion 和 Obsidian 等工具的启发，我们计划引入一个集成 AI 的强大笔记功能。从简单的笔记到完整的文档创建，这个工具将提供无缝体验，全部在平台内本地集成。
 
-- 📈 **Advanced User Tracking and Cost Management Tools**: Users will gain access to comprehensive tools designed for tracking application performance and user activities, as well as managing costs effectively. These tools will empower users with the data they need to make informed decisions, improve user experiences, and maintain budget control, optimizing the use of resources across their AI applications.
+- 📈 **高级用户跟踪和成本管理工具**：用户将获得全面的工具，用于跟踪应用程序性能和用户活动，以及有效管理成本。这些工具将为用户提供所需的数据，以做出明智的决策，改善用户体验，并保持预算控制，优化其 AI 应用程序中的资源使用。
 
-- 🧠 **AI Workflow Tool**: A node-based tool to orchestrate and compose multiple aspects of AI systems. This tool will allow users to visually connect different AI modules and services, creating complex workflows with ease. It's designed to empower users to harness the full potential of AI without needing deep technical knowledge in AI programming.
+- 🧠 **AI 工作流工具**：一个基于节点的工具，用于编排和组合 AI 系统的多个方面。这个工具将允许用户以可视化方式连接不同的 AI 模块和服务，轻松创建复杂的工作流程。它旨在使用户能够充分发挥 AI 的潜力，而无需深入的 AI 编程知识。
 
-- 🔊 **Local Text-to-Speech Integration**: This feature will allow natural language processing to convert text into lifelike spoken audio, thus making the platform more accessible, especially for visually impaired users. This integration helps in consuming information without screen interaction, facilitating multitasking and improving user engagement.
+- 🔊 **本地文本转语音集成**：此功能将允许自然语言处理将文本转换为逼真的语音音频，从而使平台更易于访问，特别是对于视障用户。这种集成有助于在无需屏幕交互的情况下消费信息，促进多任务处理并提高用户参与度。
 
-- 📣 **Wakeword Detection**: Incorporating hands-free operation through voice commands will not only enhance accessibility but also align with emerging trends in IoT and smart environments, making our platform future-ready.
+- 📣 **唤醒词检测**：通过语音命令实现免提操作不仅增强了可访问性，还与物联网和智能环境的新兴趋势保持一致，使我们的平台面向未来。
 
-- 💻 **Better Code Execution**: Enhancing coding functionalities within the platform supports a broad range of development activities, making it a one-stop solution for developers, thereby attracting a wider tech audience and fostering a robust developer community.
+- 💻 **更好的代码执行**：增强平台内的编码功能支持广泛的开发活动，使其成为开发人员的一站式解决方案，从而吸引更广泛的技术受众并培养强大的开发者社区。
 
-- 🤖 **Code Interpreter Function**: A flexible code interpreter embedded into the platform can support multiple programming languages, which reduces the dependency on external tools and streamlines the development process, increasing efficiency.
+- 🤖 **代码解释器功能**：嵌入平台的灵活代码解释器可以支持多种编程语言，这减少了对外部工具的依赖并简化了开发过程，提高效率。
 
-- 🔧 **Streamlined Fine-tune Support**: Open WebUI will offer a seamless fine-tuning process by allowing users to automatically build a fine-tune dataset simply by using the interface and rating the responses. We will provide Python notebooks to help preprocess your dataset, making it ready for fine-tuning directly from the notebook. This approach will be super simple and elegantly integrates fine-tuning into user workflows.
-
-
-## Information Retrieval (RAG) 📚
-
-Open WebUI currently provides an interface that enables the use of existing information retrieval (IR) models efficiency. However, we believe there is vast potential for improvement. We fully recognize the limitations of our current RAG (Retrieval-Augmented Generation) implementation in our WebUI, understanding that a one-size-fits-all approach does not effectively meet all users' needs. 
-
-To address this, we are committed to transforming our framework to be highly modular and extensively configurable. This new direction will enable users to tailor the information retrieval process to their specific requirements with ease, using a straightforward, interactive interface that allows for simple drag-and-drop customization. This refinement aims to significantly enhance user experience by providing a more adaptable and personalized IR setup.
-
-Here's our focused plan for advancing our information retrieval capabilities:
-
-- 🌐 **Customizable RAG Framework**: Envision a future where you can effortlessly tailor your IR setup via a user-friendly interface. This will include modular components that users can drag, drop, and configure without needing deep technical knowledge.
-
-- 🔄 **Advanced Integration with SoTA Methods**: We aim to incorporate the latest developments in retrieval methods, enhancing accuracy and efficiency with advanced techniques and architectures.
-
-- 🔍 **Dedicated R&D**: We’re scaling up our research and development to discover and integrate novel retrieval methods that push the boundaries of current methods, in collaboration with leading research entities.
-
-## Community 🤝
-
-We aim to create a vibrant community where everyone can contribute to and benefit from shared knowledge and developments:
-
-- 🏆 **LLM Leaderboard**: A community-driven approach to evaluate and rank models ensures transparency and continuous improvement, leveraging real-world applications to benchmark performance instead of relying on standard datasets that might not reflect practical utility.
-
-- 👥 **Sub-Communities**: Encouraging niche communities to curate datasets and optimize prompts can lead to better-tuned models, as these communities have specific insights and detailed feedback that typically go unnoticed in broader datasets.
-
-🔗 **Community Whitepaper**: Explore our detailed strategy and join us in shaping the future of AI-driven platforms in our [whitepaper](https://openwebui.com/assets/files/whitepaper.pdf).
+- 🔧 **简化的微调支持**：Open WebUI 将通过允许用户仅通过使用界面和评价响应来自动构建微调数据集，从而提供无缝的微调过程。我们将提供 Python 笔记本来帮助预处理您的数据集，使其直接从笔记本准备好进行微调。这种方法将非常简单，并优雅地将微调集成到用户工作流程中。
 
 
-# Vision for the Future 🔭
+## 信息检索（RAG）📚
 
-Our relentless effort stems from a clear vision we hold dearly: enhancing your daily life, saving time and allowing for more focus on what truly matters. 
+Open WebUI 目前提供了一个能够高效使用现有信息检索（IR）模型的界面。然而，我们相信还有巨大的改进空间。我们充分认识到我们当前 RAG（检索增强生成）实现在我们的 WebUI 中的局限性，理解一刀切的方法无法有效满足所有用户的需求。
 
-Imagine a world where you think, and it happens. You desire a cup of coffee made exactly the way you love, and it's brewed for you. A world where you, simply think of a comprehensive data analysis report in a particular format, and it's done at the speed of your thought. The core idea is to turn the time-consuming, routine tasks over to our AI interface, freeing up your time and attention.
+为了解决这个问题，我们致力于将我们的框架转变为高度模块化和可广泛配置的。这个新方向将使用户能够通过一个简单、交互式的界面轻松地根据其特定需求定制信息检索过程，允许简单的拖放定制。这种改进旨在通过提供更适应性和个性化的 IR 设置来显著提升用户体验。
 
-This isn’t a sci-fi future; together, we are working towards it right now. As our AI models gradually become more capable and intuitively understand your specific needs, your most mundane responsibilities become automated. Through this profound shift, our collective time allowance can be redistributed towards grand endeavours. Think space exploration, longevity research or simply extra moments with loved ones. 
+以下是我们推进信息检索能力的重点计划：
 
-Creating this imagined future won't be a walk in the park, but with your help, we believe it's within our reach. Open WebUI is more than just tech - it's there to enhance your day, giving you more space for what's really important. Together, we're working on a brighter tomorrow. Thanks for joining us in this extraordinary journey.
+- 🌐 **可定制的 RAG 框架**：设想一个未来，您可以通过用户友好的界面轻松定制您的 IR 设置。这将包括用户可以拖放和配置的模块化组件，无需深入的技术知识。
+
+- 🔄 **与最先进方法的高级集成**：我们的目标是整合检索方法的最新发展，通过先进的技术和架构提高准确性和效率。
+
+- 🔍 **专门的研发**：我们正在扩大研发规模，与领先的研究实体合作，发现和整合突破当前方法边界的新型检索方法。
+
+## 社区 🤝
+
+我们的目标是创建一个充满活力的社区，每个人都可以为共享知识和发展做出贡献并从中受益：
+
+- 🏆 **LLM 排行榜**：社区驱动的方法来评估和排名模型确保了透明度和持续改进，利用实际应用来对性能进行基准测试，而不是依赖可能无法反映实际效用的标准数据集。
+
+- 👥 **子社区**：鼓励小众社区策划数据集和优化提示可以导致更好的调优模型，因为这些社区具有在更广泛的数据集中通常被忽视的特定见解和详细反馈。
+
+🔗 **社区白皮书**：在我们的[白皮书](https://openwebui.com/assets/files/whitepaper.pdf)中探索我们的详细策略，并加入我们塑造 AI 驱动平台的未来。
+
+
+# 未来愿景 🔭
+
+我们不懈的努力源于我们深深珍视的清晰愿景：增强您的日常生活，节省时间，让您能够更多地关注真正重要的事情。
+
+想象一个世界，您想到什么，它就会发生。您想要一杯完全按照您喜欢的方式制作的咖啡，它就为您冲泡好了。一个世界，您只需想到一个特定格式的全面数据分析报告，它就以您思考的速度完成。核心理念是将耗时的常规任务交给我们的 AI 界面，释放您的时间和注意力。
+
+这不是科幻的未来；我们现在就在共同努力实现它。随着我们的 AI 模型逐渐变得更加强大并直观地理解您的特定需求，您最平凡的责任变得自动化。通过这种深刻的转变，我们的集体时间可以重新分配到宏大的事业中。想想太空探索、长寿研究或者只是与亲人共处的额外时光。
+
+创造这个想象中的未来并不容易，但在您的帮助下，我们相信它是可以实现的。Open WebUI 不仅仅是技术 - 它是为了增强您的生活，为真正重要的事情留出更多空间。我们一起努力创造更光明的明天。感谢您加入这个非凡的旅程。
 
 ---
 
-Join us as we push the boundaries of technology with these ambitious and transformative features in our roadmap! 💡🚀 Your participation and feedback are crucial as we strive to make Open WebUI a pioneering tool in technology advancement.
+加入我们，随着路线图中这些雄心勃勃和变革性的功能，一起推动技术的边界！💡🚀 在我们努力使 Open WebUI 成为技术进步的先锋工具的过程中，您的参与和反馈至关重要。
