--- a/docs/tutorials/deployment/index.mdx
+++ b/docs/tutorials/deployment/index.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-title: "☁️ Deployment"
+title: "☁️ 部署"
 ---
 import { TopBanners } from "@site/src/components/TopBanners";
 
@@ -8,12 +8,12 @@ import { TopBanners } from "@site/src/components/TopBanners";
 
 
 :::warning
-This tutorial is a community contribution and is not supported by the OpenWebUI team. It serves only as a demonstration on how to customize OpenWebUI for your specific use case. Want to contribute? Check out the contributing tutorial.
+本教程是社区贡献内容，不受 OpenWebUI 团队支持。它仅作为如何根据您的特定用例自定义 OpenWebUI 的演示。想要贡献？请查看贡献教程。
 :::
 
 :::info
-# 📢 **Calling all YouTubers!**
-We're looking for talented individuals to create videos showcasing Open WebUI's features. If you make a video, we'll feature it at the top of our guide section!
+# 📢 **召集所有 YouTuber！**
+我们正在寻找有才华的人来制作展示 Open WebUI 功能的视频。如果您制作了视频，我们会将其展示在我们的指南部分顶部！
 :::
 
 <iframe
