--- a/docs/features/plugin/functions/filter.mdx
+++ b/docs/features/plugin/functions/filter.mdx
@@ -1,191 +1,185 @@
 ---
 sidebar_position: 2
-title: "🪄 Filter Function"
+title: "🪄 过滤器函数"
 ---
 
-# 🪄 Filter Function: Modify Inputs and Outputs
+# 🪄 过滤器函数：修改输入和输出
 
-Welcome to the comprehensive guide on Filter Functions in Open WebUI! Filters are a flexible and powerful **plugin system** for modifying data *before it's sent to the Large Language Model (LLM)* (input) or *after it’s returned from the LLM* (output). Whether you’re transforming inputs for better context or cleaning up outputs for improved readability, **Filter Functions** let you do it all.  
+欢迎阅读 Open WebUI 过滤器函数的综合指南！过滤器是一个灵活而强大的**插件系统**，用于修改*发送到大型语言模型（LLM）之前*（输入）或*从 LLM 返回之后*（输出）的数据。无论您是为了更好的上下文而转换输入，还是为了提高可读性而清理输出，**过滤器函数**都能让您完成所有这些工作。
 
-This guide will break down **what Filters are**, how they work, their structure, and everything you need to know to build powerful and user-friendly filters of your own. Let’s dig in, and don’t worry—I’ll use metaphors, examples, and tips to make everything crystal clear! 🌟
-
----
-
-## 🌊 What Are Filters in Open WebUI?
-
-Imagine Open WebUI as a **stream of water** flowing through pipes:
-
-- **User inputs** and **LLM outputs** are the water.
-- **Filters** are the **water treatment stages** that clean, modify, and adapt the water before it reaches the final destination.
-
-Filters sit in the middle of the flow—like checkpoints—where you decide what needs to be adjusted.
-
-Here’s a quick summary of what Filters do:
-
-1. **Modify User Inputs (Inlet Function)**: Tweak the input data before it reaches the AI model. This is where you enhance clarity, add context, sanitize text, or reformat messages to match specific requirements.
-2. **Modify Model Outputs (Outlet Function)**: Adjust the AI's response **after it’s processed**, before showing it to the user. This can help refine, log, or adapt the data for a cleaner user experience.
-
-> **Key Concept:** Filters are not standalone models but tools that enhance or transform the data traveling *to* and *from* models.  
-
-Filters are like **translators or editors** in the AI workflow: you can intercept and change the conversation without interrupting the flow.
+本指南将分解**什么是过滤器**、它们如何工作、它们的结构，以及构建您自己的强大且用户友好的过滤器所需要知道的一切。让我们深入了解，别担心——我会使用比喻、示例和提示来让一切变得清晰明了！🌟
 
 ---
 
-## 🗺️ Structure of a Filter Function: The Skeleton
+## 🌊 什么是 Open WebUI 中的过滤器？
 
-Let's start with the simplest representation of a Filter Function. Don't worry if some parts feel technical at first—we’ll break it all down step by step!
+想象 Open WebUI 是一条流经管道的**水流**：
 
-### 🦴 Basic Skeleton of a Filter
+- **用户输入**和**LLM 输出**是水。
+- **过滤器**是在水到达最终目的地之前清洁、修改和调整水的**水处理阶段**。
+
+过滤器位于流程的中间——像检查点一样——您可以在这里决定需要调整什么。
+
+以下是过滤器功能的快速总结：
+
+1. **修改用户输入（入口函数）**：在数据到达 AI 模型之前调整输入数据。这是您增强清晰度、添加上下文、净化文本或重新格式化消息以匹配特定要求的地方。
+2. **修改模型输出（出口函数）**：在向用户显示之前调整 AI 的响应**处理后的结果**。这可以帮助完善、记录或调整数据，以获得更清晰的用户体验。
+
+> **关键概念：**过滤器不是独立的模型，而是增强或转换*流向*和*来自*模型的数据的工具。
+
+过滤器就像 AI 工作流中的**翻译者或编辑者**：您可以在不中断流程的情况下拦截和更改对话。
+
+---
+
+## 🗺️ 过滤器函数的结构：骨架
+
+让我们从过滤器函数最简单的表示开始。如果一开始有些部分感觉很技术性，别担心——我们会一步一步地分解所有内容！
+
+### 🦴 过滤器的基本骨架
 
 ```python
 from pydantic import BaseModel
 from typing import Optional
 
 class Filter:
-    # Valves: Configuration options for the filter
+    # Valves：过滤器的配置选项
     class Valves(BaseModel):  
         pass
 
     def __init__(self):
-        # Initialize valves (optional configuration for the Filter)
+        # 初始化阀门（过滤器的可选配置）
         self.valves = self.Valves()
 
     def inlet(self, body: dict) -> dict:
-        # This is where you manipulate user inputs.
+        # 这是您操作用户输入的地方。
         print(f"inlet called: {body}")
         return body  
 
     def outlet(self, body: dict) -> None:
-        # This is where you manipulate model outputs.
+        # 这是您操作模型输出的地方。
         print(f"outlet called: {body}")
 ```
 
 ---
 
-### 🎯 Key Components Explained
+### 🎯 关键组件解释
 
-#### 1️⃣ **`Valves` Class (Optional Settings)**
+#### 1️⃣ **`Valves` 类（可选设置）**
 
-Think of **Valves** as the knobs and sliders for your filter. If you want to give users configurable options to adjust your Filter’s behavior, you define those here.
+将**阀门**视为过滤器的旋钮和滑块。如果您想给用户可配置的选项来调整过滤器的行为，您可以在这里定义它们。
 
 ```python
 class Valves(BaseModel):
-    OPTION_NAME: str = "Default Value"
+    OPTION_NAME: str = "默认值"
 ```
 
-For example:  
-If you're creating a filter that converts responses into uppercase, you might allow users to configure whether every output gets totally capitalized via a valve like `TRANSFORM_UPPERCASE: bool = True/False`.
+例如：
+如果您正在创建一个将响应转换为大写的过滤器，您可以通过像 `TRANSFORM_UPPERCASE: bool = True/False` 这样的阀门允许用户配置是否将每个输出完全大写。
 
 ---
 
-#### 2️⃣ **`inlet` Function (Input Pre-Processing)**
+#### 2️⃣ **`inlet` 函数（输入预处理）**
 
+`inlet` 函数就像**烹饪前的食材准备**。想象您是一位厨师：在食材进入食谱（在这种情况下是 LLM）之前，您可能需要洗菜、切洋葱或给肉调味。没有这一步，您的最终菜品可能缺乏风味、有未洗的农产品，或者简单地说不一致。
 
-The `inlet` function is like **prepping food before cooking**. Imagine you’re a chef: before the ingredients go into the recipe (the LLM in this case), you might wash vegetables, chop onions, or season the meat. Without this step, your final dish could lack flavor, have unwashed produce, or simply be inconsistent.
+在 Open WebUI 的世界中，`inlet` 函数在将**用户输入**发送到模型之前执行这项重要的准备工作。它确保输入对 AI 来说尽可能清晰、有上下文和有帮助。
 
-In the world of Open WebUI, the `inlet` function does this important prep work on the **user input** before it’s sent to the model. It ensures the input is as clean, contextual, and helpful as possible for the AI to handle.  
+📥 **输入**：
+- **`body`**：从 Open WebUI 到模型的原始输入。它采用聊天完成请求的格式（通常是一个包含对话消息、模型设置和其他元数据字段的字典）。把这想象成您的食谱配料。
 
-📥 **Input**:  
-- **`body`**: The raw input from Open WebUI to the model. It is in the format of a chat-completion request (usually a dictionary that includes fields like the conversation's messages, model settings, and other metadata). Think of this as your recipe ingredients.
+🚀 **您的任务**：
+修改并返回 `body`。修改后的 `body` 版本就是 LLM 使用的内容，所以这是您为输入带来清晰度、结构和上下文的机会。
 
-🚀 **Your Task**:  
-Modify and return the `body`. The modified version of the `body` is what the LLM works with, so this is your chance to bring clarity, structure, and context to the input.
-
-
-##### 🍳 Why Would You Use the `inlet`?
-1. **Adding Context**: Automatically append crucial information to the user’s input, especially if their text is vague or incomplete. For example, you might add "You are a friendly assistant" or "Help this user troubleshoot a software bug."
+##### 🍳 为什么要使用 `inlet`？
+1. **添加上下文**：自动为用户的输入附加关键信息，特别是当他们的文本含糊或不完整时。例如，您可能会添加"您是一个友好的助手"或"帮助这个用户排除软件错误"。
    
-2. **Formatting Data**: If the input requires a specific format, like JSON or Markdown, you can transform it before sending it to the model.
+2. **格式化数据**：如果输入需要特定格式，如 JSON 或 Markdown，您可以在发送到模型之前对其进行转换。
 
-3. **Sanitizing Input**: Remove unwanted characters, strip potentially harmful or confusing symbols (like excessive whitespace or emojis), or replace sensitive information.
+3. **净化输入**：删除不需要的字符，去除可能有害或令人困惑的符号（如多余的空格或表情符号），或替换敏感信息。
 
-4. **Streamlining User Input**: If your model’s output improves with additional guidance, you can use the `inlet` to inject clarifying instructions automatically!
+4. **简化用户输入**：如果您的模型输出可以通过额外的指导得到改善，您可以使用 `inlet` 自动注入澄清说明！
 
-
-##### 💡 Example Use Cases: Build on Food Prep
-###### 🥗 Example 1: Adding System Context
-Let’s say the LLM is a chef preparing a dish for Italian cuisine, but the user hasn’t mentioned "This is for Italian cooking." You can ensure the message is clear by appending this context before sending the data to the model.
+##### 💡 示例用例：基于食材准备
+###### 🥗 示例 1：添加系统上下文
+假设 LLM 是一位为意大利料理准备菜品的厨师，但用户没有提到"这是为了意大利烹饪"。您可以在将数据发送到模型之前通过附加此上下文来确保消息清晰。
 
 ```python
 def inlet(self, body: dict, __user__: Optional[dict] = None) -> dict:
-    # Add system message for Italian context in the conversation
+    # 在对话中添加意大利上下文的系统消息
     context_message = {
         "role": "system",
-        "content": "You are helping the user prepare an Italian meal."
+        "content": "您正在帮助用户准备意大利餐。"
     }
-    # Insert the context at the beginning of the chat history
+    # 在聊天历史开头插入上下文
     body.setdefault("messages", []).insert(0, context_message)
     return body
 ```
 
-📖 **What Happens?**
-- Any user input like "What are some good dinner ideas?" now carries the Italian theme because we’ve set the system context! Cheesecake might not show up as an answer, but pasta sure will.
+📖 **发生了什么？**
+- 任何像"有什么好的晚餐主意？"这样的用户输入现在都带有意大利主题，因为我们设置了系统上下文！芝士蛋糕可能不会出现在答案中，但意大利面肯定会。
 
-
-###### 🔪 Example 2: Cleaning Input (Remove Odd Characters)
-Suppose the input from the user looks messy or includes unwanted symbols like `!!!`, making the conversation inefficient or harder for the model to parse. You can clean it up while preserving the core content.
+###### 🔪 示例 2：清理输入（删除奇怪的字符）
+假设用户的输入看起来很乱或包含不需要的符号，如 `!!!`，这使得对话效率低下或模型更难解析。您可以在保留核心内容的同时清理它。
 
 ```python
 def inlet(self, body: dict, __user__: Optional[dict] = None) -> dict:
-    # Clean the last user input (from the end of the 'messages' list)
+    # 清理最后的用户输入（从'messages'列表的末尾）
     last_message = body["messages"][-1]["content"]
     body["messages"][-1]["content"] = last_message.replace("!!!", "").strip()
     return body
 ```
 
-📖 **What Happens?**
-- Before: `"How can I debug this issue!!!"` ➡️ Sent to the model as `"How can I debug this issue"`
+📖 **发生了什么？**
+- 之前：`"我如何调试这个问题!!!"` ➡️ 发送给模型的是 `"我如何调试这个问题"`
 
-Note: The user feels the same, but the model processes a cleaner and easier-to-understand query.
+注意：用户感觉是一样的，但模型处理的是更清晰、更容易理解的查询。
 
+##### 📊 `inlet` 如何帮助优化 LLM 的输入：
+- 通过澄清模糊的查询提高**准确性**。
+- 通过删除不必要的噪音（如表情符号、HTML 标签或额外的标点符号）使 AI **更高效**。
+- 通过将用户输入格式化以匹配模型的预期模式或模式（比如说，特定用例的 JSON）确保**一致性**。
 
-##### 📊 How `inlet` Helps Optimize Input for the LLM:
-- Improves **accuracy** by clarifying ambiguous queries.
-- Makes the AI **more efficient** by removing unnecessary noise like emojis, HTML tags, or extra punctuation.
-- Ensures **consistency** by formatting user input to match the model’s expected patterns or schemas (like, say, JSON for a specific use case).
-
-
-💭 **Think of `inlet` as the sous-chef in your kitchen**—ensuring everything that goes into the model (your AI "recipe") has been prepped, cleaned, and seasoned to perfection. The better the input, the better the output!
+💭 **将 `inlet` 视为您厨房中的副厨师**——确保进入模型（您的 AI"食谱"）的一切都已准备好、清洁并调味至完美。输入越好，输出就越好！
 
 ---
 
-#### 3️⃣ **`outlet` Function (Output Post-Processing)**
+#### 3️⃣ **`outlet` 函数（输出后处理）**
 
-The `outlet` function is like a **proofreader**: tidy up the AI's response (or make final changes) *after it’s processed by the LLM.*  
+`outlet` 函数就像一个**校对者**：在 AI 的响应*经过 LLM 处理后*整理（或进行最终更改）。
 
-📤 **Input**:
-- **`body`**: This contains **all current messages** in the chat (user history + LLM replies).
+📤 **输入**：
+- **`body`**：这包含聊天中的**所有当前消息**（用户历史 + LLM 回复）。
 
-🚀 **Your Task**: Modify this `body`. You can clean, append, or log changes, but be mindful of how each adjustment impacts the user experience.
+🚀 **您的任务**：修改这个 `body`。您可以清理、追加或记录更改，但要注意每个调整如何影响用户体验。
 
-💡 **Best Practices**:
-- Prefer logging over direct edits in the outlet (e.g., for debugging or analytics).
-- If heavy modifications are needed (like formatting outputs), consider using the **pipe function** instead.
+💡 **最佳实践**：
+- 在出口中优先使用日志记录而不是直接编辑（例如，用于调试或分析）。
+- 如果需要大量修改（如格式化输出），请考虑使用**管道函数**代替。
 
-💡 **Example Use Case**: Strip out sensitive API responses you don't want the user to see:
+💡 **示例用例**：删除您不希望用户看到的敏感 API 响应：
 ```python
 def outlet(self, body: dict, __user__: Optional[dict] = None) -> dict:
     for message in body["messages"]:
-        message["content"] = message["content"].replace("<API_KEY>", "[REDACTED]")
+        message["content"] = message["content"].replace("<API_KEY>", "[已编辑]")
     return body 
 ```
 
 ---
 
-## 🌟 Filters in Action: Building Practical Examples
+## 🌟 过滤器实战：构建实用示例
 
-Let’s build some real-world examples to see how you’d use Filters!
+让我们构建一些真实世界的示例，看看如何使用过滤器！
 
-### 📚 Example #1: Add Context to Every User Input
+### 📚 示例 #1：为每个用户输入添加上下文
 
-Want the LLM to always know it's assisting a customer in troubleshooting software bugs? You can add instructions like **"You're a software troubleshooting assistant"** to every user query.
+想让 LLM 始终知道它在帮助客户排除软件错误？您可以在每个用户查询中添加像**"您是软件故障排除助手"**这样的说明。
 
 ```python
 class Filter:
     def inlet(self, body: dict, __user__: Optional[dict] = None) -> dict:
         context_message = {
             "role": "system", 
-            "content": "You're a software troubleshooting assistant."
+            "content": "您是软件故障排除助手。"
         }
         body.setdefault("messages", []).insert(0, context_message)
         return body
@@ -193,48 +187,48 @@ class Filter:
 
 ---
 
-### 📚 Example #2: Highlight Outputs for Easy Reading
+### 📚 示例 #2：突出显示输出以便于阅读
 
-Returning output in Markdown or another formatted style? Use the `outlet` function!
+要以 Markdown 或其他格式化样式返回输出？使用 `outlet` 函数！
 
 ```python
 class Filter:
     def outlet(self, body: dict, __user__: Optional[dict] = None) -> dict:
-        # Add "highlight" markdown for every response
+        # 为每个响应添加"突出显示"markdown
         for message in body["messages"]:
-            if message["role"] == "assistant":  # Target model response
-                message["content"] = f"**{message['content']}**"  # Highlight with Markdown
+            if message["role"] == "assistant":  # 目标模型响应
+                message["content"] = f"**{message['content']}**"  # 使用 Markdown 突出显示
         return body
 ```
 
 ---
 
-## 🚧 Potential Confusion: Clear FAQ 🛑  
+## 🚧 潜在困惑：常见问题解答 🛑
 
-### **Q: How Are Filters Different From Pipe Functions?**
+### **问：过滤器与管道函数有什么不同？**
 
-Filters modify data **going to** and **coming from models** but do not significantly interact with logic outside of these phases. Pipes, on the other hand:
-- Can integrate **external APIs** or significantly transform how the backend handles operations.
-- Expose custom logic as entirely new "models."
+过滤器修改**流向**和**来自模型**的数据，但不会显著与这些阶段之外的逻辑交互。另一方面，管道：
+- 可以集成**外部 API**或显著转换后端处理操作的方式。
+- 将自定义逻辑公开为全新的"模型"。
 
-### **Q: Can I Do Heavy Post-Processing Inside `outlet`?**
+### **问：我可以在 `outlet` 中进行大量后处理吗？**
 
-You can, but **it’s not the best practice.**:
-- **Filters** are designed to make lightweight changes or apply logging.
-- If heavy modifications are required, consider a **Pipe Function** instead.
-
----
-
-## 🎉 Recap: Why Build Filter Functions?
-
-By now, you’ve learned:
-1. **Inlet** manipulates **user inputs** (pre-processing).
-2. **Outlet** tweaks **AI outputs** (post-processing).
-3. Filters are best for lightweight, real-time alterations to the data flow.
-4. With **Valves**, you empower users to configure Filters dynamically for tailored behavior.
+您可以，但**这不是最佳实践**：
+- **过滤器**设计用于进行轻量级更改或应用日志记录。
+- 如果需要大量修改，请考虑使用**管道函数**代替。
 
 ---
 
-🚀 **Your Turn**: Start experimenting! What small tweak or context addition could elevate your Open WebUI experience? Filters are fun to build, flexible to use, and can take your models to the next level!  
+## 🎉 回顾：为什么要构建过滤器函数？
 
-Happy coding! ✨
+到目前为止，您已经了解到：
+1. **入口**操作**用户输入**（预处理）。
+2. **出口**调整**AI 输出**（后处理）。
+3. 过滤器最适合对数据流进行轻量级、实时的更改。
+4. 通过**阀门**，您使用户能够动态配置过滤器以获得定制行为。
+
+---
+
+🚀 **轮到您了**：开始实验吧！什么样的小调整或上下文添加可以提升您的 Open WebUI 体验？过滤器构建起来很有趣，使用灵活，可以将您的模型提升到新的水平！
+
+编码愉快！✨
