--- a/docs/features/plugin/tools/index.mdx
+++ b/docs/features/plugin/tools/index.mdx
@@ -1,56 +1,56 @@
 ---
 sidebar_position: 2
-title: "⚙️ Tools"
+title: "⚙️ 工具"
 ---
 
-## What are Tools?
-Tools are python scripts that are provided to an LLM at the time of the request. Tools allow LLMs to perform actions and receive additional context as a result. Generally speaking, your LLM of choice will need to support function calling for tools to be reliably utilized.
+## 什么是工具？
+工具是在请求时提供给 LLM 的 Python 脚本。工具允许 LLM 执行操作并获得额外的上下文作为结果。一般来说，您选择的 LLM 需要支持函数调用才能可靠地使用工具。
 
-Tools enable many use cases for chats, including web search, web scraping, and API interactions within the chat. 
+工具为聊天启用了许多用例，包括网络搜索、网页抓取和聊天中的 API 交互。
 
-Many Tools are available to use on the [Community Website](https://openwebui.com/tools) and can easily be imported into your Open WebUI instance. 
+[社区网站](https://openwebui.com/tools)上有许多可用的工具，可以轻松导入到您的 Open WebUI 实例中。
 
-## How can I use Tools?
-[Once installed](#how-to-install-tools), Tools can be used by assigning them to any LLM that supports function calling and then enabling that Tool. To assign a Tool to a model, you need to navigate to Workspace => Models. Here you can select the model for which you’d like to enable any Tools. 
+## 如何使用工具？
+[安装后](#如何安装工具)，可以通过将工具分配给任何支持函数调用的 LLM 并启用该工具来使用。要将工具分配给模型，您需要导航到工作区 => 模型。在这里，您可以选择要为其启用任何工具的模型。
 
-Once you click the pencil icon to edit the model settings, scroll down to the Tools section and check any Tools you wish to enable. Once done you must click save.
+点击铅笔图标编辑模型设置后，向下滚动到工具部分，勾选您想要启用的任何工具。完成后必须点击保存。
 
-Now that Tools are enabled for the model, you can click the “+” icon when chatting with an LLM to use various Tools. Please keep in mind that enabling a Tool does not force it to be used. It means the LLM will be provided the option to call this Tool.
+现在工具已为模型启用，您可以在与 LLM 聊天时点击"+"图标来使用各种工具。请记住，启用工具并不会强制使用它。这意味着 LLM 将被提供调用此工具的选项。
 
-Lastly, we do provide a filter function on the community site that allows LLMs to autoselect Tools without you needing to enable them in the “+” icon menu: https://openwebui.com/f/hub/autotool_filter/
+最后，我们在社区网站上提供了一个过滤器功能，允许 LLM 自动选择工具，而无需您在"+"图标菜单中启用它们：https://openwebui.com/f/hub/autotool_filter/
 
-Please note: when using the AutoTool Filter, you will still need to take the steps above to enable the Tools per model.
+请注意：使用自动工具过滤器时，您仍需要按照上述步骤为每个模型启用工具。
 
-## How to install Tools
-The Tools import process is quite simple. You will have two options:
+## 如何安装工具
+工具导入过程非常简单。您有两个选项：
 
-### Download and import manually
-Navigate to the community site: https://openwebui.com/tools/
-1) Click on the Tool you wish to import
-2) Click the blue “Get” button in the top right-hand corner of the page
-3) Click “Download as JSON export”
-4) You can now upload the Tool into OpenWebUI by navigating to Workspace => Tools and clicking “Import Tools”
+### 手动下载和导入
+导航到社区网站：https://openwebui.com/tools/
+1) 点击您想要导入的工具
+2) 点击页面右上角的蓝色"获取"按钮
+3) 点击"下载为 JSON 导出"
+4) 您现在可以通过导航到工作区 => 工具并点击"导入工具"将工具上传到 OpenWebUI
 
-### Import via your OpenWebUI URL
-1) Navigate to the community site: https://openwebui.com/tools/
-2) Click on the Tool you wish to import
-3) Click the blue “Get” button in the top right-hand corner of the page
-4) Enter the IP address of your OpenWebUI instance and click “Import to WebUI” which will automatically open your instance and allow you to import the Tool.
+### 通过您的 OpenWebUI URL 导入
+1) 导航到社区网站：https://openwebui.com/tools/
+2) 点击您想要导入的工具
+3) 点击页面右上角的蓝色"获取"按钮
+4) 输入您的 OpenWebUI 实例的 IP 地址，然后点击"导入到 WebUI"，这将自动打开您的实例并允许您导入工具。
 
-Note: You can install your own Tools and other Tools not tracked on the community site using the manual import method. Please do not import Tools you do not understand or are not from a trustworthy source. Running unknown code is ALWAYS a risk.
+注意：您可以使用手动导入方法安装自己的工具和社区网站上未跟踪的其他工具。请不要导入您不理解或不是来自可信来源的工具。运行未知代码始终存在风险。
 
-## What sorts of things can Tools do?
-Tools enable diverse use cases for interactive conversations by providing a wide range of functionality such as:
+## 工具可以做什么？
+工具通过提供广泛的功能为交互式对话启用多样化的用例，例如：
 
-- [**Web Search**](https://openwebui.com/t/constliakos/web_search/): Perform live web searches to fetch real-time information.
-- [**Image Generation**](https://openwebui.com/t/justinrahb/image_gen/): Generate images based on the user prompt
-- [**External Voice Synthesis**](https://openwebui.com/t/justinrahb/elevenlabs_tts/): Make API requests within the chat to integrate external voice synthesis service ElevenLabs and generate audio based on the LLM output.
+- [**网络搜索**](https://openwebui.com/t/constliakos/web_search/)：执行实时网络搜索以获取实时信息。
+- [**图像生成**](https://openwebui.com/t/justinrahb/image_gen/)：根据用户提示生成图像
+- [**外部语音合成**](https://openwebui.com/t/justinrahb/elevenlabs_tts/)：在聊天中进行 API 请求以集成外部语音合成服务 ElevenLabs 并根据 LLM 输出生成音频。
 
-## Writing A Custom Toolkit
+## 编写自定义工具包
 
-Toolkits are defined in a single Python file, with a top level docstring with metadata and a `Tools` class.
+工具包在单个 Python 文件中定义，顶级文档字符串包含元数据和一个 `Tools` 类。
 
-### Example Top-Level Docstring
+### 顶级文档字符串示例
 
 ```python
 """
@@ -66,57 +66,57 @@ licence: MIT
 """
 ```
 
-### Tools Class
+### Tools 类
 
-Tools have to be defined as methods withing a class called `Tools`, with optional subclasses called `Valves` and `UserValves`, for example:
+工具必须在名为 `Tools` 的类中定义为方法，可选的子类称为 `Valves` 和 `UserValves`，例如：
 
 ```python
 class Tools:
     def __init__(self):
-        """Initialize the Tool."""
+        """初始化工具。"""
         self.valves = self.Valves()
 
     class Valves(BaseModel):
-        api_key: str = Field("", description="Your API key here")
+        api_key: str = Field("", description="在此输入您的 API 密钥")
 
     def reverse_string(self, string: str) -> str:
         """
-        Reverses the input string.
-        :param string: The string to reverse
+        反转输入字符串。
+        :param string: 要反转的字符串
         """
-        # example usage of valves
+        # valves 的示例用法
         if self.valves.api_key != "42":
-            return "Wrong API key"
+            return "API 密钥错误"
         return string[::-1] 
 ```
 
-### Type Hints
-Each tool must have type hints for arguments. As of version OpenWebUI version 0.4.3, the types may also be nested, such as `queries_and_docs: list[tuple[str, int]]`. Those type hints are used to generate the JSON schema that is sent to the model. Tools without type hints will work with a lot less consistency.
+### 类型提示
+每个工具必须为参数提供类型提示。从 OpenWebUI 版本 0.4.3 开始，类型也可以嵌套，例如 `queries_and_docs: list[tuple[str, int]]`。这些类型提示用于生成发送给模型的 JSON 模式。没有类型提示的工具的一致性会差得多。
 
-### Valves and UserValves - (optional, but HIGHLY encouraged)
+### Valves 和 UserValves - (可选，但强烈建议)
 
-Valves and UserValves are used to allow users to provide dynamic details such as an API key or a configuration option. These will create a fillable field or a bool switch in the GUI menu for the given Tool.
+Valves 和 UserValves 用于允许用户提供动态详细信息，如 API 密钥或配置选项。这些将在给定工具的 GUI 菜单中创建一个可填充字段或布尔开关。
 
-Valves are configurable by admins alone and UserValves are configurable by any users.
+Valves 仅由管理员配置，而 UserValves 可由任何用户配置。
 
 <details>
-<summary>Example</summary>
+<summary>示例</summary>
 
 ```
-# Define and Valves
+# 定义 Valves
     class Valves(BaseModel):
         priority: int = Field(
-            default=0, description="Priority level for the filter operations."
+            default=0, description="过滤器操作的优先级。"
         )
         test_valve: int = Field(
-            default=4, description="A valve controlling a numberical value"
+            default=4, description="控制数值的阀门"
         )
         pass
 
-    # Define any UserValves
+    # 定义任何 UserValves
     class UserValves(BaseModel):
         test_user_valve: bool = Field(
-            default=False, description="A user valve controlling a True/False (on/off) switch"
+            default=False, description="控制 True/False（开/关）开关的用户阀门"
         )
         pass
 
@@ -125,62 +125,62 @@ Valves are configurable by admins alone and UserValves are configurable by any u
 ```
 </details>
 
-### Optional Arguments
-Below is a list of optional arguments your tools can depend on:
-- `__event_emitter__`: Emit events (see following section)
-- `__event_call__`: Same as event emitter but can be used for user interactions
-- `__user__`: A dictionary with user information
-- `__metadata__`: Dictionary with chat metadata
-- `__messages__`: List of previous messages
-- `__files__`: Attached files
-- `__model__`: Model name
+### 可选参数
+以下是您的工具可以依赖的可选参数列表：
+- `__event_emitter__`：发出事件（参见下一节）
+- `__event_call__`：与事件发射器相同，但可用于用户交互
+- `__user__`：包含用户信息的字典
+- `__metadata__`：包含聊天元数据的字典
+- `__messages__`：先前消息的列表
+- `__files__`：附加的文件
+- `__model__`：模型名称
 
-### Event Emitters
-Event Emitters are used to add additional information to the chat interface. Similarly to Filter Outlets, Event Emitters are capable of appending content to the chat. Unlike Filter Outlets, they are not capable of stripping information. Additionally, emitters can be activated at any stage during the Tool.
+### 事件发射器
+事件发射器用于向聊天界面添加额外信息。与过滤器出口类似，事件发射器能够向聊天追加内容。与过滤器出口不同，它们不能删除信息。此外，发射器可以在工具的任何阶段激活。
 
-There are two different types of Event Emitters:
+有两种不同类型的事件发射器：
 
-#### Status
-This is used to add statuses to a message while it is performing steps. These can be done at any stage during the Tool. These statuses appear right above the message content. These are very useful for Tools that delay the LLM response or process large amounts of information. This allows you to inform users what is being processed in real-time.
+#### 状态
+这用于在执行步骤时向消息添加状态。这些可以在工具的任何阶段完成。这些状态显示在消息内容的正上方。这对于延迟 LLM 响应或处理大量信息的工具非常有用。这允许您实时通知用户正在处理什么。
 
 ```
 await __event_emitter__(
             {
-                "type": "status", # We set the type here
-                "data": {"description": "Message that shows up in the chat", "done": False, "hidden": False}, 
-                # Note done is False here indicating we are still emitting statuses
+                "type": "status", # 在这里设置类型
+                "data": {"description": "在聊天中显示的消息", "done": False, "hidden": False}, 
+                # 注意这里 done 为 False，表示我们仍在发出状态
             }
         )
 ```
 
 <details>
-<summary>Example</summary>
+<summary>示例</summary>
 
 ```
 async def test_function(
         self, prompt: str, __user__: dict, __event_emitter__=None
     ) -> str:
         """
-        This is a demo
+        这是一个演示
 
-        :param test: this is a test parameter
+        :param test: 这是一个测试参数
         """
 
         await __event_emitter__(
             {
-                "type": "status", # We set the type here
-                "data": {"description": "Message that shows up in the chat", "done": False}, 
-                # Note done is False here indicating we are still emitting statuses
+                "type": "status", # 在这里设置类型
+                "data": {"description": "在聊天中显示的消息", "done": False}, 
+                # 注意这里 done 为 False，表示我们仍在发出状态
             }
         )
 
-        # Do some other logic here
+        # 在这里执行一些其他逻辑
         await __event_emitter__(
             {
                 "type": "status",
-                "data": {"description": "Completed a task message", "done": True, "hidden": False},
-                # Note done is True here indicating we are done emitting statuses
-                # You can also set "hidden": True if you want to remove the status once the message is returned
+                "data": {"description": "完成任务消息", "done": True, "hidden": False},
+                # 注意这里 done 为 True，表示我们已完成发出状态
+                # 您也可以设置 "hidden": True，如果您想在返回消息后删除状态
             }
         )
 
@@ -188,45 +188,45 @@ async def test_function(
             await __event_emitter__(
                 {
                     "type": "status",
-                    "data": {"description": f"An error occured: {e}", "done": True},
+                    "data": {"description": f"发生错误：{e}", "done": True},
                 }
             )
 
-            return f"Tell the user: {e}"
+            return f"告诉用户：{e}"
 ```
 </details>
 
-#### Message
-This type is used to append a message to the LLM at any stage in the Tool. This means that you can append messages, embed images, and even render web pages before, or after, or during the LLM response.
+#### 消息
+此类型用于在工具的任何阶段向 LLM 追加消息。这意味着您可以在 LLM 响应之前、之后或期间追加消息、嵌入图像，甚至渲染网页。
 
 ```
 await __event_emitter__(
                     {
-                        "type": "message", # We set the type here
-                        "data": {"content": "This message will be appended to the chat."},
-                        # Note that with message types we do NOT have to set a done condition
+                        "type": "message", # 在这里设置类型
+                        "data": {"content": "此消息将被追加到聊天中。"},
+                        # 注意，对于消息类型，我们不必设置完成条件
                     }
                 )
 ```
 
 <details>
-<summary>Example</summary>
+<summary>示例</summary>
 
 ```
 async def test_function(
         self, prompt: str, __user__: dict, __event_emitter__=None
     ) -> str:
         """
-        This is a demo
+        这是一个演示
 
-        :param test: this is a test parameter
+        :param test: 这是一个测试参数
         """
 
         await __event_emitter__(
                     {
-                        "type": "message", # We set the type here
-                        "data": {"content": "This message will be appended to the chat."},
-                        # Note that with message types we do NOT have to set a done condition
+                        "type": "message", # 在这里设置类型
+                        "data": {"content": "此消息将被追加到聊天中。"},
+                        # 注意，对于消息类型，我们不必设置完成条件
                     }
                 )
 
@@ -234,10 +234,10 @@ async def test_function(
             await __event_emitter__(
                 {
                     "type": "status",
-                    "data": {"description": f"An error occured: {e}", "done": True},
+                    "data": {"description": f"发生错误：{e}", "done": True},
                 }
             )
 
-            return f"Tell the user: {e}"
+            return f"告诉用户：{e}"
 ```
 </details>
