--- a/docs/getting-started/advanced-topics/index.mdx
+++ b/docs/getting-started/advanced-topics/index.mdx
@@ -1,42 +1,42 @@
 ---
 sidebar_position: 4
-title: "📚 Advanced Topics"
+title: "📚 高级主题"
 ---
 
-# 📚 Advanced Topics
+# 📚 高级主题
 
-Explore deeper concepts and advanced configurations of Open WebUI to enhance your setup.
-
----
-
-## 🔧 Environment Configuration  
-Understand how to set environment variables to customize your Open WebUI setup.  
-[Environment Configuration Guide](/getting-started/advanced-topics/env-configuration)
+深入探索 Open WebUI 的深层概念和高级配置，以增强您的设置。
 
 ---
 
-## 📊 Logging and Monitoring  
-Learn how to monitor, log, and troubleshoot your system effectively.  
-[Logging and Monitoring Guide](/getting-started/advanced-topics/logging)
+## 🔧 环境配置  
+了解如何设置环境变量以自定义您的 Open WebUI 设置。  
+[环境配置指南](/getting-started/advanced-topics/env-configuration)
 
 ---
 
-## 🛠️ Development Guide  
-Dive into the development process and learn how to contribute to Open WebUI.  
-[Development Guide](/getting-started/advanced-topics/development)
+## 📊 日志和监控  
+学习如何有效地监控、记录日志和排除系统故障。  
+[日志和监控指南](/getting-started/advanced-topics/logging)
 
 ---
 
-## 🔒 HTTPS Encryption  
-Ensure secure communication by implementing HTTPS encryption in your deployment.  
-[HTTPS Encryption Guide](/getting-started/advanced-topics/https-encryption)
+## 🛠️ 开发指南  
+深入了解开发过程并学习如何为 Open WebUI 做出贡献。  
+[开发指南](/getting-started/advanced-topics/development)
 
 ---
 
-## 🔗 API Endpoints  
-Get essential information for API integration and automation using our models.  
-[API Endpoints Guide](/getting-started/advanced-topics/api-endpoints)
+## 🔒 HTTPS 加密  
+通过在部署中实施 HTTPS 加密确保安全通信。  
+[HTTPS 加密指南](/getting-started/advanced-topics/https-encryption)
 
 ---
 
-Looking for installation instructions? Head over to our [Quick Start Guide](/getting-started/quick-start).  
+## 🔗 API 端点  
+获取使用我们的模型进行 API 集成和自动化的基本信息。  
+[API 端点指南](/getting-started/advanced-topics/api-endpoints)
+
+---
+
+寻找安装说明？请查看我们的[快速入门指南](/getting-started/quick-start)。  
