--- a/docs/getting-started/quick-start/index.mdx
+++ b/docs/getting-started/quick-start/index.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 2
-title: "⏱️ Quick Start"
+title: "⏱️ 快速开始"
 ---
 
 import Tabs from '@theme/Tabs';
@@ -20,20 +20,20 @@ import PythonUpdating from './tab-python/PythonUpdating.md';
 
 <TopBanners />
 
-:::info **Important Note on User Roles and Privacy:**
+:::info **关于用户角色和隐私的重要说明：**
 
-- **Admin Creation:** The first account created on Open WebUI gains **Administrator privileges**, controlling user management and system settings.
-- **User Registrations:** Subsequent sign-ups start with **Pending** status, requiring Administrator approval for access.
-- **Privacy and Data Security:** **All your data**, including login details, is **locally stored** on your device. Open WebUI ensures **strict confidentiality** and **no external requests** for enhanced privacy and security.
-  - **All models are private by default.** Models must be explicitly shared via groups or by being made public. If a model is assigned to a group, only members of that group can see it. If a model is made public, anyone on the instance can see it.
+- **管理员创建：** Open WebUI 上创建的第一个账户获得**管理员权限**，控制用户管理和系统设置。
+- **用户注册：** 后续注册的用户以**待审核**状态开始，需要管理员批准才能访问。
+- **隐私和数据安全：** **所有您的数据**，包括登录详情，都**本地存储**在您的设备上。Open WebUI 确保**严格的保密性**和**无外部请求**，以增强隐私和安全性。
+  - **所有模型默认为私有。** 模型必须通过群组显式共享或设为公开。如果模型分配给群组，只有该群组的成员才能看到它。如果模型设为公开，实例上的任何人都可以看到它。
 
 :::
 
-Choose your preferred installation method below:
+在下面选择您喜欢的安装方法：
 
-- **Docker:** **Officially supported and recommended for most users**
-- **Python:** Suitable for low-resource environments or those wanting a manual setup
-- **Kubernetes:** Ideal for enterprise deployments that require scaling and orchestration
+- **Docker：** **官方支持并推荐大多数用户使用**
+- **Python：** 适用于低资源环境或想要手动设置的用户
+- **Kubernetes：** 适用于需要扩展和编排的企业部署
 
 
 <Tabs>
@@ -92,11 +92,11 @@ Choose your preferred installation method below:
       </TabItem>
 
 
-      <TabItem value="development" label="Development">
+      <TabItem value="development" label="开发">
         <div className='mt-5'>
-          <h3>Development Setup</h3>
+          <h3>开发设置</h3>
           <p>
-            For developers who want to contribute, check the Development Guide in <a href="/getting-started/advanced-topics">Advanced Topics</a>.
+            对于想要贡献的开发者，请查看<a href="/getting-started/advanced-topics">高级主题</a>中的开发指南。
           </p>
         </div>
       </TabItem>
@@ -118,42 +118,42 @@ Choose your preferred installation method below:
   </TabItem>
 
 
-  <TabItem value="third-party" label="Third Party">
+  <TabItem value="third-party" label="第三方">
     <Tabs>
       <TabItem value="pinokio-computer" label="Pinokio.computer">
-        ### Pinokio.computer Installation
+        ### Pinokio.computer 安装
 
-        For installation via Pinokio.computer, please visit their website:
+        有关通过 Pinokio.computer 安装，请访问他们的网站：
 
         [https://pinokio.computer/](https://pinokio.computer/)
 
-        Support for this installation method is provided through their website.
+        此安装方法的支持通过他们的网站提供。
       </TabItem>
     </Tabs>
 
-    ### Additional Third-Party Integrations
+    ### 其他第三方集成
 
-    *(Add information about third-party integrations as they become available.)*
+    *（随着第三方集成的可用性添加相关信息。）*
   </TabItem>
 </Tabs>
 
-## Next Steps
+## 下一步
 
-After installing, visit:
+安装完成后，访问：
 
-- [http://localhost:3000](http://localhost:3000) to access OpenWebUI.
-- or [http://localhost:8080/](http://localhost:8080/) when using a Python deployment.
+- [http://localhost:3000](http://localhost:3000) 访问 OpenWebUI。
+- 或者使用 Python 部署时访问 [http://localhost:8080/](http://localhost:8080/)。
 
-You are now ready to start using OpenWebUI!
+您现在可以开始使用 OpenWebUI 了！
 
-## Using OpenWebUI with Ollama
-If you're using OpenWebUI with Ollama, be sure to check out our [Starting with Ollama Guide](/getting-started/quick-start/starting-with-ollama) to learn how to manage your Ollama instances with Open WebUI.
+## 将 OpenWebUI 与 Ollama 一起使用
+如果您将 OpenWebUI 与 Ollama 一起使用，请务必查看我们的 [Ollama 入门指南](/getting-started/quick-start/starting-with-ollama)，了解如何使用 Open WebUI 管理您的 Ollama 实例。
 
-## Join the Community
+## 加入社区
 
-Need help? Have questions? Join our community:
+需要帮助？有问题？加入我们的社区：
 
 - [Open WebUI Discord](https://discord.gg/5rJgQTnV4s)
 - [GitHub Issues](https://github.com/open-webui/open-webui/issues)
 
-Stay updated with the latest features, troubleshooting tips, and announcements!
+及时了解最新功能、故障排除提示和公告！
