--- a/docs/mission.mdx
+++ b/docs/mission.mdx
@@ -1,38 +1,38 @@
 ---
 sidebar_position: 2000
-title: "🎯 Our Mission"
+title: "🎯 我们的使命"
 ---
 
 import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
-### A Note from Our Founder  
+### 创始人寄语
 
-Before diving into our mission, we invite you to read our founder's blog post: ["Why I’m Building Open WebUI"](https://jryng.com/thoughts/why-open-webui). In this post, Tim shares the inspiration, challenges, and hopes driving Open WebUI's vision forward. It's a heartfelt introduction to what we're all about!
+在深入了解我们的使命之前，我们邀请您阅读我们创始人的博客文章：["为什么我要构建 Open WebUI"](https://jryng.com/thoughts/why-open-webui)。在这篇文章中，Tim 分享了推动 Open WebUI 愿景前进的灵感、挑战和希望。这是对我们项目本质的一个真诚介绍！
 
 ---
 
-Hello there! 👋
+你好！👋
 
-Imagine a world where local, open models that can run on any machine, united as one, outperform proprietary giants like GPT-4. Even better, imagine us all having the capability to train and reproduce state-of-the-art models like GPT-4 or GPT-5 from scratch, using high-quality, curated data.
+想象一个世界，本地运行的开源模型可以在任何机器上运行，团结一致，超越像 GPT-4 这样的专有巨头。更好的是，想象我们都有能力使用高质量、精心策划的数据从头开始训练和复制像 GPT-4 或 GPT-5 这样的最先进模型。
 
-Here's the thing, though: one of the biggest challenges in creating these foundation and fine-tune models is the substantial need for **[high-quality data](https://arxiv.org/abs/2305.11206)**, which is both costly and time-consuming to gather and curate. This is where Open WebUI's mission comes into play. Our mission is to contribute to this vision by building the best AI interface and crowdsourcing curated datasets from our community of users.
+但是，这里有一个问题：在创建这些基础模型和微调模型时，最大的挑战之一是对**[高质量数据](https://arxiv.org/abs/2305.11206)**的巨大需求，这些数据的收集和策划既昂贵又耗时。这就是 Open WebUI 使命的切入点。我们的使命是通过构建最好的 AI 界面并从我们的用户社区众包策划数据集来为这一愿景做出贡献。
 
 — [Tim](https://github.com/tjbck)
 
 ---
 
-Our mission is founded on the belief that AI technologies hold transformative potential for society, yet their benefits have been narrowly confined due to complex setup requirements. Recognizing this, we are dedicated to democratizing AI by developing an easy-to-install, feature-rich local WebUI that is designed to operate locally without internet access. Enabling anyone with basic technical skills to tap into the power of AI, effectively bringing its capabilities to communities far and wide.
+我们的使命建立在这样一个信念之上：AI 技术对社会具有变革性的潜力，但由于复杂的设置要求，其益处一直受到限制。认识到这一点，我们致力于通过开发一个易于安装、功能丰富的本地 WebUI 来民主化 AI，该界面设计为无需互联网接入即可本地运行。使任何具备基本技术技能的人都能利用 AI 的力量，有效地将其能力带给广大社区。
 
-At the heart of our efforts is the creation of an open-sourced ecosystem of AI tools. Our commitment lies in making AI not only accessible but also beneficial for everyone. We envision a future where AI acts as a lever for societal advancement, driving progress, and technological breakthroughs across all communities.
+我们努力的核心是创建一个开源的 AI 工具生态系统。我们的承诺在于使 AI 不仅可以访问，而且对每个人都有益。我们设想的未来是 AI 作为社会进步的杠杆，推动所有社区的进步和技术突破。
 
-By eliminating technological barriers and making AI's advantages universally accessible, we aim to foster a positive impact worldwide. Our ultimate goal is to ensure that AI serves as a catalyst for positive change, helping to bridge gaps and create a more equitable society where everyone can benefit from the advancements in technology.
+通过消除技术障碍并使 AI 的优势普遍可及，我们旨在促进全球范围内的积极影响。我们的最终目标是确保 AI 成为积极变革的催化剂，帮助弥合差距，创造一个更加公平的社会，让每个人都能从技术进步中受益。
 
-### Our Vision: Shaping the Future Together
+### 我们的愿景：共同塑造未来
 
-At the heart of our mission lies a profound commitment not just to envision a future where advanced AI technology is universally accessible, but to actively build towards it. Our efforts extend beyond the development of our WebUI; We are at the forefront of creating an ecosystem that embodies the democratization of AI technology. This ecosystem, envisioned as a vibrant, community-driven platform, will be a repository of shared knowledge—ranging from model presets and custom prompts to valuable chat logs. A space where the collective intelligence of our community acts as the driving force for the continuous evolution and refinement of AIs, ensuring these advancements serve us, the actual users of these technologies.
+在我们使命的核心，不仅仅是设想一个先进 AI 技术普遍可及的未来，更是要积极地朝着这个方向努力。我们的工作不仅限于开发我们的 WebUI；我们正在前沿创建一个体现 AI 技术民主化的生态系统。这个生态系统被设想为一个充满活力的、社区驱动的平台，将成为共享知识的储存库——从模型预设和自定义提示到有价值的聊天记录。在这个空间中，我们社区的集体智慧将作为 AI 持续发展和改进的驱动力，确保这些进步服务于我们这些技术的实际用户。
 
-Our strategy aims to tackle the complex challenges of AI, such as model fine-tuning and dataset curation, head-on. Leveraging the collective skills and insights of our community, we'll forge innovative pathways that not only enhance the precision and relevance of AI models but also guarantee these improvements are shared openly. Our objective is unequivocal: to democratize access to refined, user-curated datasets, thereby eliminating barriers to advancing AI for all.
+我们的策略旨在直面 AI 的复杂挑战，如模型微调和数据集策划。通过利用我们社区的集体技能和见解，我们将开辟创新途径，不仅提高 AI 模型的精确性和相关性，而且确保这些改进得到公开共享。我们的目标明确：民主化对精炼的、用户策划的数据集的访问，从而消除所有人推进 AI 的障碍。
 
-As we navigate this journey, our vision serves as our north star, guiding our efforts to turn bold ambitions into reality. We extend an invitation for you to join us in this endeavor, as we work diligently to ensure AI technology becomes an empowering resource for individuals and communities across the globe.
+在这个旅程中，我们的愿景作为我们的北极星，指引我们将大胆的抱负转化为现实的努力。我们邀请您加入我们的这项事业，因为我们正在努力确保 AI 技术成为全球各地个人和社区的赋能资源。
