--- a/docs/sponsorships.mdx
+++ b/docs/sponsorships.mdx
@@ -1,34 +1,34 @@
 ---
 sidebar_position: 1800
-title: "🌐 Sponsorships"
+title: "🌐 赞助"
 ---
 
 [![](https://img.shields.io/static/v1?label=Sponsor&message=%E2%9D%A4&logo=GitHub&color=%23fe8e86)](https://github.com/sponsors/tjbck)
 
-## The Impact of Your Support
+## 您的支持的影响
 
-As Open WebUI grows, the tasks and challenges we face expand as well. [Tim](/team) is at the heart of this project, tirelessly working to ensure all aspects of Open WebUI not only function but thrive. Yet, imagine the additional improvements we could make with a little extra support.
+随着 Open WebUI 的发展，我们面临的任务和挑战也在扩大。[Tim](/team) 是这个项目的核心，不知疲倦地工作以确保 Open WebUI 的各个方面不仅能够运作，而且能够蓬勃发展。然而，想象一下，如果有一点额外的支持，我们还能做出哪些改进。
 
-Consider the practical benefits your organization gains from Open WebUI. A modest contribution from users like you allows us to focus more on refining features and less on managing resources. Each helping hand makes a meaningful difference, aligning our daily realities with our ambitious goals.
+考虑一下您的组织从 Open WebUI 获得的实际收益。像您这样的用户的适度贡献使我们能够更多地专注于改进功能，而不是管理资源。每一份帮助都能产生有意义的差异，使我们的日常现实与我们雄心勃勃的目标保持一致。
 
-We're incredibly thankful to our current sponsors. Your commitment has brought us closer to realizing the full potential of Open WebUI. Every contribution, big or small, strengthens the project and lays the groundwork for its continued success.
+我们非常感谢我们当前的赞助商。您的承诺使我们更接近实现 Open WebUI 的全部潜力。每一份贡献，无论大小，都能加强项目并为其持续成功奠定基础。
 
-Thank you for considering joining us in this practical yet visionary endeavor. Here, every bit of support is not only appreciated—it’s crucial for keeping our project vibrant, dynamic, and responsive to users’ needs.
+感谢您考虑加入我们这个实用而富有远见的事业。在这里，每一点支持不仅受到感激——它对于保持我们的项目充满活力、动态和响应用户需求至关重要。
 
-## Sponsorship Policies
+## 赞助政策
 
-At Open WebUI, our community always comes first. Sponsors are welcome, but they must respect our community-first approach. This philosophy guides all our sponsorship policies.
+在 Open WebUI，我们的社区始终是第一位的。我们欢迎赞助商，但他们必须尊重我们以社区为先的方针。这一理念指导着我们所有的赞助政策。
 
-### Hard Rules
+### 硬性规则
 
-These are the non-negotiable rules for sponsors:
+这些是赞助商必须遵守的非协商规则：
 
-- Sponsors will always be clearly identified as sponsors.
-- Aggressive sales tactics directed at our community members are strictly prohibited.
-- We don’t sell personal information about our community members to sponsors (e.g., to add to their mailing list).
+- 赞助商将始终被明确标识为赞助商。
+- 严禁对我们的社区成员采取激进的销售策略。
+- 我们不向赞助商出售社区成员的个人信息（例如，添加到他们的邮件列表中）。
 
-### Soft Rules
+### 软性规则
 
-Our community members should not be treated as sales leads.
+我们的社区成员不应被视为销售线索。
 
-We expect sponsors to be exemplary community members. It’s acceptable to subtly promote job openings at your company and showcase your product, but hard selling is not allowed. Additionally, do not ask community members to join your mailing list.
+我们期望赞助商成为模范社区成员。适度宣传您公司的工作机会和展示您的产品是可以接受的，但不允许强行推销。此外，不要要求社区成员加入您的邮件列表。
