--- a/docs/team.mdx
+++ b/docs/team.mdx
@@ -1,30 +1,29 @@
 ---
 sidebar_position: 2200
-title: "👥 Our Team"
+title: "👥 我们的团队"
 ---
 
 import { TopBanners } from "@site/src/components/TopBanners";
 
 <TopBanners />
 
-## 🌟 Meet Our Team!
+## 🌟 认识我们的团队！
 
-Our team is led by the dedicated creator and founder, [Tim J. Baek](https://github.com/tjbck). Although Tim is currently the only official member of the team, we are incredibly fortunate to have a community of **[amazing contributors](https://github.com/open-webui/open-webui/graphs/contributors)** who find this project valuable and actively participate in its continued success.
+我们的团队由专注的创始人 [Tim J. Baek](https://github.com/tjbck) 领导。虽然 Tim 目前是团队唯一的正式成员，但我们非常幸运地拥有一个由**[优秀贡献者](https://github.com/open-webui/open-webui/graphs/contributors)**组成的社区，他们认为这个项目有价值，并积极参与其持续成功。
 
-### 💓 Our Contributors
+### 💓 我们的贡献者
 
 <a href="https://github.com/open-webui/open-webui/graphs/contributors">
   <img
     src="https://contrib.rocks/image?repo=open-webui/open-webui"
-    alt="Contributors"
+    alt="贡献者"
   />
 </a>
 
-### Important Note:
+### 重要提示：
 
-To keep things smooth and organized, please do not contact or `@` mention anyone other than the official maintainer. If you have any questions or need assistance, `@tjbck` is your go-to person. You can also reach out via our official email, hello@openwebui.com. 📨
+为了保持工作顺畅和有序，请不要联系或使用 `@` 提及官方维护者以外的任何人。如果您有任何问题或需要帮助，`@tjbck` 是您的首选联系人。您也可以通过我们的官方电子邮件 hello@openwebui.com 联系我们。📨
 
-Your understanding and cooperation are appreciated! 💪
+感谢您的理解和配合！💪
 
-
-Let's keep building something awesome together! 🚀
+让我们继续一起打造令人惊叹的项目！🚀
