--- a/docs/troubleshooting/index.mdx
+++ b/docs/troubleshooting/index.mdx
@@ -1,21 +1,21 @@
 ---
 sidebar_position: 600
-title: "🛠️ Troubleshooting"
+title: "🛠️ 故障排除"
 ---
 
 
-## 🌟 General Troubleshooting Tips
+## 🌟 常见故障排除技巧
 
-Encountering issues? Don't worry, we're here to help! 😊 Start with this important step:
+遇到问题了？别担心，我们来帮你！😊 从这个重要步骤开始：
 
-- 🔄 Make sure you're using the **latest version** of the software. 
+- 🔄 确保你使用的是软件的**最新版本**。
 
-With this project constantly evolving, updates and fixes are regularly added. Keeping your software up-to-date is crucial to take advantage of all the enhancements and fixes, ensuring the best possible experience. 🚀
+随着项目的不断发展，我们会定期添加更新和修复。保持软件最新状态对于充分利用所有改进和修复至关重要，这样可以确保获得最佳体验。🚀
 
-### 🤝 Community Support 
+### 🤝 社区支持
 
-This project thrives on community spirit and passion. If you still face problems after updating, we warmly invite you to join our vibrant community on [Discord](https://discord.com/invite/5rJgQTnV4s). There, you can share your experiences, find solutions, and connect with fellow enthusiasts who might be navigating similar challenges. Engaging with our community doesn't just help solve your problems; it strengthens the entire network of support, so we all grow together. 🌱
+这个项目的蓬勃发展源于社区的热情和奉献。如果更新后仍然遇到问题，我们诚挚邀请你加入我们充满活力的 [Discord](https://discord.com/invite/5rJgQTnV4s) 社区。在那里，你可以分享经验、寻找解决方案，并与可能面临类似挑战的其他爱好者建立联系。参与我们的社区不仅能帮助解决你的问题，还能加强整个支持网络，让我们共同成长。🌱
 
-🌟 If your issues are pressing and you need a quicker resolution, consider [supporting our project](/sponsorships). Your sponsorship not only fast-tracks your queries in a dedicated sponsor-only channel, but also directly supports the [dedicated maintainer](/mission) who is passionately committed to refining and enhancing this tool for everyone.
+🌟 如果你的问题比较紧急需要更快的解决方案，可以考虑[赞助我们的项目](/sponsorships)。你的赞助不仅可以让你在专属的赞助者频道中获得优先支持，还能直接支持我们[专职的维护者](/mission)，他们致力于为每个人完善和增强这个工具。
 
-Together, let's harness these opportunities to create the best environment and keep pushing the boundaries of what we can achieve with our project. Thank you from the bottom of our hearts for your understanding, cooperation, and belief in our mission! 🙏
+让我们携手利用这些机会，创造最好的环境，并继续突破项目的边界。衷心感谢你的理解、合作和对我们使命的信任！🙏
