--- a/docs/troubleshooting/password-reset.mdx
+++ b/docs/troubleshooting/password-reset.mdx
@@ -1,80 +1,80 @@
 ---
 sidebar_position: 1
-title: "🔑 Reset Admin Password"
+title: "🔑 重置管理员密码"
 ---
 
-# Resetting Your Admin Password 🗝️
+# 重置管理员密码 🗝️
 
-If you've forgotten your admin password, don't worry! Below you'll find step-by-step guides to reset your admin password for Docker 🐳 deployments and local installations of Open WebUI.
+如果你忘记了管理员密码，别担心！以下是针对 Docker 🐳 部署和本地安装的 Open WebUI 的分步重置管理员密码指南。
 
-## For Docker Deployments 🐳
+## Docker 部署方式 🐳
 
-Follow these steps to reset the admin password for Open WebUI when deployed using Docker.
+按照以下步骤重置使用 Docker 部署的 Open WebUI 的管理员密码。
 
-### Step 1: Generate a New Password Hash 🔐
+### 步骤 1：生成新的密码哈希 🔐
 
-First, you need to create a bcrypt hash of your new password. Run the following command on your local machine, replacing `your-new-password` with the password you wish to use:
+首先，你需要为新密码创建一个 bcrypt 哈希。在本地机器上运行以下命令，将 `your-new-password` 替换为你想使用的密码：
 
 ```bash
 htpasswd -bnBC 10 "" your-new-password | tr -d ':\n'
 ```
 
-**Note:** The output will include a bcrypt hash with special characters that need to be handled carefully. Any `$` characters in the hash will need to be triple-escaped (replaced with `\\\`) to be used correctly in the next step.
+**注意：** 输出将包含带有特殊字符的 bcrypt 哈希值，需要小心处理。哈希值中的任何 `$` 字符都需要三重转义（替换为 `\\\`）才能在下一步中正确使用。
 
-### Step 2: Update the Password in Docker 🔄
+### 步骤 2：在 Docker 中更新密码 🔄
 
-Next, you'll update the password in your Docker deployment. Replace `HASH` in the command below with the bcrypt hash generated in Step 1, making sure to triple-escape any `$` characters. Also, replace `admin@example.com` with the email address linked to your admin account.
+接下来，你将在 Docker 部署中更新密码。将下面命令中的 `HASH` 替换为步骤 1 中生成的 bcrypt 哈希值，确保对任何 `$` 字符进行三重转义。同时，将 `admin@example.com` 替换为与你的管理员账户关联的电子邮件地址。
 
-**Important:** The following command may not work in all cases. If it doesn't work for you, try the alternative command below it.
+**重要：** 以下命令可能不适用于所有情况。如果不起作用，请尝试下面的替代命令。
 
 ```bash
 docker run --rm -v open-webui:/data alpine/socat EXEC:"bash -c 'apk add sqlite && echo UPDATE auth SET password='\''HASH'\'' WHERE email='\''admin@example.com'\''; | sqlite3 /data/webui.db'", STDIO
 ```
 
-## For Local Installations 💻
+## 本地安装方式 💻
 
-If you have a local installation of Open WebUI, here's how you can reset your admin password directly on your system.
+如果你有 Open WebUI 的本地安装，以下是如何直接在系统上重置管理员密码的方法。
 
-### Step 1: Generate a New Password Hash 🔐
+### 步骤 1：生成新的密码哈希 🔐
 
-Just as with the Docker method, start by generating a bcrypt hash of your new password using the following command. Remember to replace `your-new-password` with your new password:
+与 Docker 方法一样，首先使用以下命令为新密码生成 bcrypt 哈希值。记得将 `your-new-password` 替换为你的新密码：
 
 ```bash
 htpasswd -bnBC 10 "" your-new-password | tr -d ':\n'
 ```
 
-### Step 2: Update the Password Locally 🔄
+### 步骤 2：在本地更新密码 🔄
 
-Now, navigate to the `open-webui` directory on your local machine. Update your password by replacing `HASH` with the bcrypt hash from Step 1 and `admin@example.com` with your admin account email, and execute:
+现在，导航到本地机器上的 `open-webui` 目录。通过将 `HASH` 替换为步骤 1 中的 bcrypt 哈希值，将 `admin@example.com` 替换为你的管理员账户电子邮件，然后执行：
 
 ```bash
 sqlite3 backend/data/webui.db "UPDATE auth SET password='HASH' WHERE email='admin@example.com';"
 ```
 
 
-#### Alternate Docker Method
+#### Docker 替代方法
 
-_If you have issues with the above._  I had issues chaining the `bash` commands in `alpine/socat`, _since `bash` doesn't exist._
+_如果上述方法有问题。_ 我在 `alpine/socat` 中链接 `bash` 命令时遇到问题，_因为 `bash` 不存在。_
 
-1. **Run `alpine` linux connected to the open-webui volume.**
+1. **运行连接到 open-webui 卷的 `alpine` linux。**
 
     ```bash
     docker run -it --rm -v open-webui:/path/to/data alpine
     ```
-    _`/path/to/data` depends on __your__ volume settings._
+    _`/path/to/data` 取决于__你的__卷设置。_
 
-    1. Install `apache2-utils` and `sqlite`:
+    1. 安装 `apache2-utils` 和 `sqlite`：
 
         ```sh
         apk add apache2-utils sqlite
         ```
-    1. Generate `bcrypt` hash:
+    1. 生成 `bcrypt` 哈希：
 
         ```sh
         htpasswd -bnBC 10 "" your-new-password | tr -d ':'
         ```
 
-    1. Update password:
+    1. 更新密码：
 
         ```sh
         sqlite3 /path/to/data/webui.db
@@ -82,11 +82,11 @@ _If you have issues with the above._  I had issues chaining the `bash` commands 
 
         ```sql
         UPDATE auth SET password='HASH' WHERE email='admin@example.com';
-        -- exit sqlite: [Ctrl + d]
+        -- 退出 sqlite：[Ctrl + d]
         ```
 
         
 ---
 
-📖 By following these straightforward steps, you'll regain access to your Open WebUI admin account in no time. If you encounter any issues during the process, please consider searching for your issue on forums or community platforms.
+📖 通过遵循这些简单的步骤，你很快就能重新获得 Open WebUI 管理员账户的访问权限。如果在此过程中遇到任何问题，请考虑在论坛或社区平台上搜索你的问题。
 ```
